--- a/src/translations/hi.json
+++ b/src/translations/hi.json
@@ -8,7 +8,72 @@
     "niceToMeetYouWithName": "आपसे मिलकर अच्छा लगा, {{name}}!",
     "cancel": "रद्द करें",
     "offlineError": "कनेक्शन टूटा",
-    "offlineMessage": "ऐसा लगता है कि आप ऑफलाइन हैं। चिंता न करें, आपका टेक्स्ट यहीं है! कृपया अपना कनेक्शन जांचें और फिर से सेव करने का प्रयास करें।"
+    "offlineMessage": "ऐसा लगता है कि आप ऑफलाइन हैं। चिंता न करें, आपका टेक्स्ट यहीं है! कृपया अपना कनेक्शन जांचें और फिर से सेव करने का प्रयास करें।",
+    "version": "संस्करण",
+    "madeWithLove": "आपके मन के लिए ❤️ के साथ बनाया गया।",
+    "website": "वेबसाइट",
+    "ourWebsite": "हमारी वेबसाइट",
+    "progress": "प्रगति",
+    "letsStart": "चलो शुरू करें",
+    "alreadyHaveAccount": "पहले से ही एक खाता है?",
+    "login": "लॉग इन करें",
+    "continue": "जारी रखें",
+    "days": "दिन",
+    "daysCount": "{{count}} दिन",
+    "day": "दिन",
+    "plusMore": "+{{count}} और",
+    "unlocked": "अनलॉक किया गया!",
+    "unlockedOn": "को अनलॉक किया गया",
+    "activeDays": "{{count}} दिन सक्रिय",
+    "daysGoal": "{{count}} दिन का लक्ष्य",
+    "daysLeft": "{{count}} दिन शेष",
+    "daysLeftLabel": "दिन शेष",
+    "hour": "घंटा",
+    "min": "मिनट",
+    "min_short": "मि",
+    "less": "कम",
+    "more": "अधिक",
+    "activity": "गतिविधि",
+    "lastMonths": "पिछले {{count}} महीने",
+    "maxStreak": "अधिकतम सिलसिला",
+    "nextMilestone": "अगला मील का पत्थर",
+    "reachMascot": "{{name}} तक पहुँचें",
+    "unlockMascot": "{{name}} अनलॉक करें",
+    "dayStreak": "{{count}} दिन का सिलसिला",
+    "unlockedOnDay": "{{date}} को अनलॉक किया गया • दिन {{count}}",
+    "genericTitles": [
+      "आपकी यात्रा का एक क्षण",
+      "याद रखने योग्य विचार",
+      "आपकी कहानी का एक टुकड़ा",
+      "दिन पर विचार",
+      "एक जागरूक कैप्चर",
+      "शब्दों में आपकी यात्रा",
+      "रखने के लिए एक विचार",
+      "व्यक्तिगत प्रतिबिंब"
+    ],
+    "looksGreat": "बहुत अच्छा लग रहा है",
+    "swipeToExplore": "एक्सप्लोर करने के लिए स्वाइप करें",
+    "deleteMemoryTitle": "इस याद को हटाएं?",
+    "deleteMemoryDesc": "यह क्रिया पूर्ववत नहीं की जा सकती। क्या आप सुनिश्चित हैं?",
+    "noMemoriesFound": "कोई यादें नहीं मिलीं।",
+    "journal": "जर्नल",
+    "linkAccount": "खाता लिंक करें",
+    "keepItUp": "इसे जारी रखें!",
+    "privacyPolicy": "गोपनीयता नीति",
+    "termsOfService": "सेवा की शर्तें",
+    "lastUpdated": "अंतिम अपडेट",
+    "hero": "HERO",
+    "beginner": "शुरुआती",
+    "expert": "विशेषज्ञ",
+    "master": "मास्टर",
+    "dedicated": "समर्पित",
+    "legend": "दिग्गज",
+    "goodbye": "अलविदा",
+    "great": "बहुत अच्छा",
+    "updateTime": "समय अपडेट करें",
+    "setPassword": "पासवर्ड सेट करें",
+    "locale_code": "hi",
+    "appName": "Cloudy"
   },
   "home": {
     "dailyGratitude": "दैनिक आभार",
@@ -18,6 +83,8 @@
     "emptyEntryTitle": "खाली प्रविष्टि",
     "emptyEntryMessage": "कृपया सहेजने के लिए कुछ लिखें।",
     "saveError": "आपकी प्रविष्टि सहेजी नहीं जा सकी।",
+    "conversion_nudge": "अपनी यात्रा सुरक्षित करें",
+    "conversion_nudge_desc": "अपनी प्रगति सहेजने के लिए एक खाता बनाएं",
     "setup": {
       "beautifullySaid": "खूबसूरत बात!",
       "callYou": "Cloudy आपको क्या कहकर बुलाए?",
@@ -26,7 +93,11 @@
       "reminderTitle": "मुझे आपको चिंतन करने के लिए कब याद दिलाना चाहिए?",
       "setReminder": "रिमाइंडर सेट करें",
       "noThanks": "नहीं धन्यवाद, मुझे याद रहेगा"
-    }
+    },
+    "streakNudgeTitle": "आप बहुत अच्छा कर रहे हैं!",
+    "streakNudgeBody": "क्या आप एक खाता लिंक करना चाहते हैं ताकि आप इन यादों को कभी न खोएं?",
+    "motivationTitle": "गति बनाए रखें!",
+    "motivationBody": "आप अद्भुत कर रहे हैं! दिन में केवल 2 मिनट के लिए इस पर टिके रहने से {{struggle}} को कम करने में मदद मिलती है और आपको {{goal}} के करीब लाता है। अधिक दोस्तों और पुरस्कारों को अनलॉक करने के लिए इसके साथ बने रहें!"
   },
   "navigation": {
     "entry": "प्रविष्टि",
@@ -36,6 +107,7 @@
   "profile": {
     "title": "प्रोफ़ाइल",
     "hi": "नमस्ते, {{name}}!",
+    "friend": "दोस्त",
     "streakDay": "{{count}} दिन",
     "streakTitle": "सिलसिला!",
     "sections": {
@@ -54,7 +126,46 @@
       "setGoals": "लक्ष्य सेट करें",
       "setStruggles": "संघर्ष सेट करें"
     },
-    "logout": "लॉग आउट"
+    "logout": "लॉग आउट",
+    "setup": {
+      "aFreshStart": "एक नई शुरुआत!",
+      "nameTitle": "Cloudy आपको क्या कहकर बुलाए?",
+      "ageTitle": "आपकी आयु कितनी है?",
+      "genderTitle": "आपकी पहचान क्या है?",
+      "locationTitle": "आप कहाँ से हैं?",
+      "goalsTitle": "Cloudy का उपयोग करने के आपके मुख्य लक्ष्य क्या हैं?",
+      "strugglesTitle": "हाल ही में आपको क्या परेशान कर रहा है?",
+      "mascotTitle": "अपना साथी चुनें",
+      "seeProgress": "प्रगति देखें"
+    },
+    "genders": {
+      "female": "महिला",
+      "male": "पुरुष",
+      "nonBinary": "नॉन-बाइनरी",
+      "noSay": "बताना पसंद नहीं"
+    },
+    "goals": {
+      "innerPeace": "भीतरी शांति",
+      "happiness": "खुशी",
+      "betterSleep": "बेहतर नींद",
+      "clarity": "मानसिक स्पष्टता",
+      "productivity": "उत्पादकता",
+      "selfLove": "आत्म-प्रेम",
+      "focus": "फोकस",
+      "gratitude": "आभार"
+    },
+    "struggles": {
+      "stress": "तनाव",
+      "anxiety": "चिंता",
+      "overthinking": "अति विचार (Overthinking)",
+      "lowEnergy": "कम ऊर्जा",
+      "sleepIssues": "नींद की समस्या",
+      "lackOfFocus": "फोकस की कमी"
+    },
+    "accentColor": "एक्सेंट रंग",
+    "yourVibe": "आपका वाइब।",
+    "personalizeVibe": "Cloudy को उस रंग के साथ निजीकृत करें जो आपकी ऊर्जा से मेल खाता हो।",
+    "unlockStreak": "{{count}} दिन के सिलसिले पर अनलॉक करें"
   },
   "settings": {
     "title": "सेटिंग्स",
@@ -65,15 +176,166 @@
     "nightDescription": "एक शांत डार्क पैलेट पर स्विच करें",
     "accentColor": "एक्सेंट रंग",
     "accentDescription": "अपने ऐप के प्राथमिक रंग को निजीकृत करें",
-    "lockCloud": "मेरे क्लाउड को लॉक करें",
+    "lockCloud": "सुरक्षा लॉक",
     "lockDescription": "आपकी डायरी के लिए बायोमेट्रिक सुरक्षा",
     "ourHome": "हमारा घर",
     "visitWebsite": "हमारी वेबसाइट पर जाएँ",
     "privacySecurity": "गोपनीयता और सुरक्षा",
-    "cloudyWhisper": "Cloudy विस्पर",
+    "cloudyWhisper": "फीडबैक और सपोर्ट",
     "feedbackDescription": "फीडबैक भेजें या बग रिपोर्ट करें",
     "language": "भाषा",
-    "languageDescription": "अपनी पसंदीदा भाषा चुनें"
+    "languageDescription": "अपनी पसंदीदा भाषा चुनें",
+    "deleteAccount": "खाता और डेटा हटाएं",
+    "remindTimeTitle": "आपको कब याद दिलाऊं?",
+    "chooseVibe": "अपना वाइब चुनें",
+    "createPasswordTitle": "पासवर्ड बनाएं",
+    "createPasswordDesc": "यह आपको अपनी ईमेल और इस पासवर्ड का उपयोग करके अपने खाते में लॉग इन करने की अनुमति देगा।",
+    "deleteConfirmTitle": "क्या आप वाकई जाना चाहते हैं?",
+    "deleteConfirmDesc": "यह आपकी सभी यादें और आपकी प्रोफ़ाइल को स्थायी रूप से मिटा देगा। यह क्रिया पूर्ववत नहीं की जा सकती।",
+    "stayButton": "रुको, मैं रुकूँगा!",
+    "deleteEverything": "हाँ, सब कुछ हटा दें",
+    "addPassword": "पासवर्ड लॉगिन जोड़ें",
+    "addPasswordDesc": "ईमेल और पासवर्ड के साथ लॉग इन सक्षम करें",
+    "secureJourney": "अपनी यात्रा सुरक्षित करें",
+    "secureJourneyDesc": "अपनी प्रगति सहेजने के लिए एक खाता बनाएं",
+    "logoutTitle": "जाने के लिए तैयार हैं?",
+    "loggingOut": "लॉग आउट हो रहा है...",
+    "notSupported": "समर्थित नहीं है",
+    "bioNotSupportedDesc": "आपका डिवाइस बायोमेट्रिक्स का समर्थन नहीं करता है या कोई नामांकित नहीं है।",
+    "authToEnable": "लॉक सक्षम करने के लिए प्रमाणित करें",
+    "authToDisable": "लॉक अक्षम करने के लिए प्रमाणित करें",
+    "accountDeletedTitle": "खाता हटा दिया गया",
+    "accountDeletedDesc": "आपका डेटा हटा दिया गया है। हमें उम्मीद है कि आप किसी दिन फिर से मिलेंगे।",
+    "wait": "रुको",
+    "passwordLengthError": "पासवर्ड कम से कम 6 अक्षरों का होना चाहिए।",
+    "passwordAddedTitle": "सफल",
+    "passwordAddedDesc": "पासवर्ड जोड़ा गया! अब आप Google या ईमेल के साथ लॉग इन कर सकते हैं।",
+    "setPasswordPlaceholder": "एक सुरक्षित पासवर्ड सेट करें",
+    "accentColorsLockedTitle": "सुविधा लॉक है",
+    "accentColorsLockedDesc": "एक्सेंट रंगों को अनलॉक करने के लिए 60-दिन के सिलसिले तक पहुँचें!",
+    "deleteAccountErrorTitle": "त्रुटि",
+    "deleteAccountError": "खाता हटाया नहीं जा सका। कृपया इसके बजाय लॉग आउट करने का प्रयास करें।",
+    "english": "English"
+  },
+  "logout": {
+    "title": "जल्द ही मिलते हैं!",
+    "loggingOut": "लॉग आउट हो रहा है...",
+    "loseAccessTitle": "रुको! आप सब कुछ खो देंगे!",
+    "loseAccessMessage": "आपकी प्रगति सहेजी नहीं जाएगी और आप तब तक पहुंच खो देंगे जब तक कि आप पहले एक खाता नहीं बना लेते।",
+    "secureAccount": "मेरा खाता सुरक्षित करें",
+    "loseData": "लॉग आउट करें और डेटा खो दें",
+    "readyTitle": "जाने के लिए तैयार हैं?",
+    "safeMessage": "आपके लौटने तक हम आपकी प्रगति को सुरक्षित रखेंगे।",
+    "stay": "रुको, मैं रुकूँगा!",
+    "confirm": "लॉग आउट"
+  },
+  "insights": {
+    "title": "अंतर्दृष्टि",
+    "allTime": "हर समय",
+    "locked": "लॉक",
+    "entries": "प्रविष्टियां",
+    "words": "शब्द",
+    "wordsPerEntry": "शब्द / प्रविष्टि",
+    "topThemes": "शीर्ष थीम्स",
+    "unlockDesc": "अनलॉक करने के लिए 7 दिनों के सिलसिले तक पहुँचें।",
+    "trackProgress": "प्रगति ट्रैक करें",
+    "analysis": "Cloudy विश्लेषण",
+    "numericalPatterns": "आपकी कहानी के संख्यात्मक पैटर्न",
+    "keyMetrics": "प्रमुख मेट्रिक्स",
+    "totalLogs": "कुल लॉग",
+    "avgLength": "औसत लंबाई",
+    "maxWords": "अधिकतम शब्द",
+    "timeSpent": "बिताया गया समय",
+    "wordCount": "शब्द गणना",
+    "writingRhythm": "लेखन लय",
+    "morning": "सुबह",
+    "afternoon": "दोपहर",
+    "evening": "शाम",
+    "writing": "लेखन",
+    "words_unit": "शब्द",
+    "logs_unit": "लॉग"
+  },
+  "flashback": {
+    "title": "फ्लैशबैक",
+    "desc": "आपके अतीत का एक क्यूरेटेड मिश्रण, दैनिक परोसा जाता है।",
+    "enterMix": "मिक्स में प्रवेश करें",
+    "unlockDesc": "अनलॉक करने के लिए 30 दिनों के सिलसिले तक पहुँचें।",
+    "cookiesDailyMix": "कुक़ी का दैनिक मिक्स",
+    "uniqueBlend": "आपकी यात्रा का एक अनूठा मिश्रण",
+    "dailyServing": "दैनिक सेवा",
+    "menuHighlights": "मेनू हाइलाइट्स",
+    "fanFavorite": "व्यक्तिगत पसंदीदा",
+    "firstCourse": "पहला कोर्स",
+    "dailySpecial": "आज का विशेष",
+    "topPick": "शीर्ष विकल्प",
+    "whereItBegan": "जहाँ से शुरुआत हुई",
+    "accountAge": "खाते की आयु",
+    "longestGap": "सबसे बड़ा अंतराल",
+    "loveMeter": "लव मीटर",
+    "consistency": "निरंतरता",
+    "loved": "पसंदीदा",
+    "active": "सक्रिय",
+    "needsMemories": "फ्लैशबैक शुरू करने के लिए कुक़ी को और यादों की ज़रूरत है!",
+    "tasteMemory": "इस याद का स्वाद लें"
+  },
+  "progress": {
+    "unlockedCount": "{{unlocked}}/{{total}} अनलॉक",
+    "maxStreak": "अधिकतम सिलसिला: {{count}}",
+    "days": "दिन 🔥",
+    "daysActive": "{{count}} दिन सक्रिय",
+    "daysGoal": "{{count}} दिन का लक्ष्य",
+    "description": "प्रत्येक साथी आपकी मानसिक वृद्धि में एक मील का पत्थर दर्शाता है क्योंकि आप अपनी दैनिक आदतों को विकसित करते हैं।",
+    "nextReward": "{{count}} दिनों में अगला पुरस्कार",
+    "nextReward_one": "{{count}} दिन में अगला पुरस्कार",
+    "unlockMindfulness": "अनलॉक करने के लिए {{count}} दिन की जागरूकता की आवश्यकता है।",
+    "reward": "पुरस्कार",
+    "maintainHabit": "आदत बनाए रखें",
+    "unlockedMascot": "आपने {{name}} को अनलॉक किया!",
+    "rewardUnlocked": "पुरस्कार अनलॉक"
+  },
+  "companions": {
+    "SUNNY": {
+      "name": "Sunny",
+      "description": "जागरूकता के पहले बीज बोना।",
+      "trait": "शुरुआती",
+      "perk": "आधार अनुभव",
+      "perkDesc": "यात्रा अब शुरू होती है।"
+    },
+    "BRAINY": {
+      "name": "Brainy",
+      "description": "आपके मन के पैटर्न का विश्लेषण करना।",
+      "trait": "विशेषज्ञ",
+      "perk": "उपयोगकर्ता अंतर्दृष्टि",
+      "perkDesc": "अपनी व्यक्तिगत अंतर्दृष्टि देखें।"
+    },
+    "DREAMY": {
+      "name": "Dreamy",
+      "description": "रात के चिंतन के जादू में महारत हासिल करना।",
+      "trait": "मास्टर",
+      "perk": "सिलसिला फ्रीज",
+      "perkDesc": "महीने में एक बार आपका सिलसिला बचाता है।"
+    },
+    "COOKIE": {
+      "name": "Cookie",
+      "description": "दैनिक उपस्थिति के साथ अपनी आदत को पोषित करना।",
+      "trait": "समर्पित",
+      "perk": "शेफ का विशेष",
+      "perkDesc": "आपकी पिछली यादों का एक स्वादिष्ट मिश्रण बनाता है।"
+    },
+    "GROOVY": {
+      "name": "Groovy",
+      "description": "अकाट्य गति के साथ अपनी यात्रा को रॉक करना।",
+      "trait": "दिग्गज",
+      "perk": "एक्सेंट रंग",
+      "perkDesc": "अपनी पसंद के प्राथमिक रंग के साथ अपने ऐप को निजीकृत करें।"
+    },
+    "SPARKY": {
+      "name": "Sparky",
+      "description": "आत्म-देखभाल के नायक के रूप में अंतिम परिवर्तन।",
+      "trait": "HERO",
+      "perk": "सत्यापित स्थिति",
+      "perkDesc": "गोल्डन प्रोफाइल बैज और सत्यापित सील अर्जित करें।"
+    }
   },
   "journey": {
     "title": "आपकी यात्रा",
@@ -89,10 +351,58 @@
     "confirmDelete": "हाँ, इसे हटा दें",
     "cancelDelete": "नहीं, इसे रखें",
     "tooLateTitle": "बहुत देर हो चुकी",
-    "tooLateMessage": "आप प्रविष्टियां बनाने के 24 घंटों के भीतर ही उन्हें हटा सकते हैं।"
+    "tooLateMessage": "आप प्रविष्टियां बनाने के 24 घंटों के भीतर ही उन्हें हटा सकते हैं।",
+    "chefsSpecial": "शेफ का विशेष",
+    "memoryInspector": "मेमोरी इंस्पेक्टर"
+  },
+  "calendar": {
+    "weekdays": {
+      "short": ["रवि", "सोम", "मंगल", "बुध", "गुरु", "शुक्र", "शनि"]
+    }
+  },
+  "welcome": {
+    "hi": "नमस्ते, मैं Cloudy हूँ",
+    "companion": "स्पष्ट मन के लिए आपका छोटा साथी।"
+  },
+  "statistics": {
+    "title": "अंतर्दृष्टि",
+    "analysis": "Cloudy विश्लेषण",
+    "description": "आपकी कहानी के संख्यात्मक पैटर्न",
+    "keyMetrics": "प्रमुख मेट्रिक्स",
+    "writingRhythm": "लेखन लय",
+    "activeDays": "सक्रिय दिन",
+    "totalLogs": "कुल लॉग",
+    "avgLength": "औसत लंबाई",
+    "maxWords": "अधिकतम शब्द",
+    "timeSpent": "बिताया गया समय",
+    "wordCount": "शब्द गणना",
+    "days": "दिन",
+    "logs": "लॉग",
+    "words": "शब्द",
+    "writing": "लेखन",
+    "morning": "सुबह",
+    "afternoon": "दोपहर",
+    "evening": "शाम",
+    "topThemes": "शीर्ष थीम्स"
+  },
+  "summary": {
+    "title": "हम वहां पहुंच सकते हैं, साथ मिलकर।",
+    "body": "शोध से पता चलता है कि दिन में सिर्फ {{gratitude}} लिखने से {{struggle}} कम हो सकता है और आपको {{goal}} खोजने में मदद मिल सकती है।",
+    "gratitude": "एक आभार",
+    "startWriting": "लिखना शुरू करें",
+    "andSuffix": "और अन्य",
+    "andJoin": "और"
+  },
+  "accents": {
+    "ORANGE": "सनी ऑरेंज",
+    "BLUE": "ओशन ब्लू",
+    "GREEN": "नेचर ग्रीन",
+    "PURPLE": "रॉयल पर्पल",
+    "PINK": "रोज पिंक",
+    "TEAL": "काल्म टील"
   },
   "feedback": {
-    "title": "फीडबैक और सहायता",
+    "title": "फीडबैक और सपोर्ट",
     "description": "कोई बग मिला? कोई विचार है? या बस हाय कहना चाहते हैं? मैं सब सुनने को तैयार हूं! आप हमारी वेबसाइट के माध्यम से भी संपर्क कर सकते हैं।",
     "placeholder": "मुझे सब बताएं...",
     "emailPlaceholder": "जवाब के लिए ईमेल (वैकल्पिक)",
@@ -108,7 +418,7 @@
   "review": {
     "delight": "खुशी का क्षण ✨",
     "enjoyingTitle": "क्या आप Cloudy के साथ अपनी यात्रा का आनंद ले रहे हैं?",
-    "enjoyingMessage": "आपका सिलसिला अद्भुत है! रिव्यू साझा करने से दूसरों को भी अपनी शांति खोजने में मदद मिलती है।",
+    "enjoyingMessage": "आपका सिलसिला अद्भुत है! रिव्यु साझा करने से दूसरों को भी अपनी शांति खोजने में मदद मिलती है।",
     "rateButton": "बहुत पसंद! अभी रेट करें"
   },
   "auth": {
@@ -162,6 +472,10 @@
     "title": "चिंता न करें!",
     "message": "आपने एक दिन छोड़ दिया, लेकिन यह यात्रा का हिस्सा है। आज एक नया सिलसिला शुरू करें!",
     "button": "चलो शुरू करें"
+  },
+  "streakFreeze": {
+    "title": "सिलसिला सुरक्षित! ❄️",
+    "message": "आप एक दिन चूक गए, लेकिन Dreamy ने आपके सिलसिले की रक्षा के लिए जादू का इस्तेमाल किया। गति बनाए रखें!"
   },
   "lockScreen": {
     "title": "Cloudy सुरक्षित है",
