--- a/src/translations/ko.json
+++ b/src/translations/ko.json
@@ -3,41 +3,111 @@
     "save": "저장",
     "okay": "확인",
     "error": "오류",
-    "maybeLater": "나중에 하기",
+    "maybeLater": "나중에",
     "niceToMeetYou": "만나서 반가워요!",
     "niceToMeetYouWithName": "만나서 반가워요, {{name}}님!",
     "cancel": "취소",
-    "offlineError": "연결 끊김",
-    "offlineMessage": "오프라인 상태인 것 같습니다. 걱정하지 마세요, 입력하신 내용은 그대로 있습니다! 연결 상태를 확인하고 다시 저장해 주세요.",
+    "offlineError": "연결 유실",
+    "offlineMessage": "오프라인 상태인 것 같습니다. 걱정 마세요, 작성하신 글은 그대로 있습니다! 연결 상태를 확인하고 다시 저장을 시도해 주세요.",
+    "version": "버전",
+    "madeWithLove": "당신의 마음을 위해 ❤️로 제작되었습니다.",
+    "website": "웹사이트",
+    "ourWebsite": "공식 웹사이트",
+    "progress": "진척도",
+    "letsStart": "시작하기",
+    "alreadyHaveAccount": "이미 계정이 있으신가요?",
+    "login": "로그인",
+    "continue": "계속하기",
+    "days": "일",
+    "daysCount": "{{count}}일",
+    "day": "일",
+    "plusMore": "+{{count}}개 더보기",
+    "unlocked": "잠금 해제됨!",
+    "unlockedOn": "해제 날짜:",
+    "activeDays": "{{count}}일 활동함",
+    "daysGoal": "목표: {{count}}일",
+    "daysLeft": "{{count}}일 남음",
+    "daysLeftLabel": "남은 기간",
+    "hour": "시간",
+    "min": "분",
+    "min_short": "분",
+    "less": "적음",
+    "more": "많음",
+    "activity": "활동",
+    "lastMonths": "최근 {{count}}개월",
+    "maxStreak": "최고 기록",
+    "nextMilestone": "다음 목표",
+    "reachMascot": "{{name}}에 도달하기",
+    "unlockMascot": "{{name}} 잠금 해제",
+    "dayStreak": "연속 기록: {{count}}일",
+    "unlockedOnDay": "{{date}}에 잠금 해제됨 • {{count}}일차",
+    "genericTitles": [
+      "당신의 여정 중 한 순간",
+      "기억하고 싶은 생각",
+      "당신의 이야기 조각",
+      "오늘을 돌아보며",
+      "마음 챙김의 기록",
+      "글로 남기는 여정",
+      "간직하고 싶은 생각",
+      "개인적인 성찰"
+    ],
+    "looksGreat": "멋지네요",
+    "swipeToExplore": "밀어보기",
+    "deleteMemoryTitle": "이 기억을 삭제할까요?",
+    "deleteMemoryDesc": "이 작업은 되돌릴 수 없습니다. 정말 삭제하시겠습니까?",
+    "noMemoriesFound": "저장된 기억이 없습니다.",
+    "journal": "저널",
+    "linkAccount": "계정 연결",
+    "keepItUp": "계속 힘내세요!",
+    "privacyPolicy": "개인정보 처리방침",
+    "termsOfService": "서비스 약관",
+    "lastUpdated": "최근 업데이트",
+    "hero": "영웅",
+    "beginner": "초보자",
+    "expert": "전문가",
+    "master": "마스터",
+    "dedicated": "헌신가",
+    "legend": "전설",
+    "goodbye": "작별 인사",
+    "great": "훌륭해요",
+    "updateTime": "시간 업데이트",
+    "setPassword": "비밀번호 설정",
     "locale_code": "ko",
     "appName": "Cloudy"
   },
   "home": {
     "dailyGratitude": "오늘의 감사",
-    "placeholder": "오늘 당신의 하루는 어땠나요?",
+    "placeholder": "오늘 어떤 생각을 하셨나요?",
     "today": "오늘",
-    "charCount": "{{count}} / 200 자",
-    "emptyEntryTitle": "내용 없음",
-    "emptyEntryMessage": "저장하려면 내용을 입력해주세요.",
-    "saveError": "기록을 저장할 수 없습니다.",
+    "charCount": "{{count}} / 200자",
+    "emptyEntryTitle": "비어 있음",
+    "emptyEntryMessage": "저장할 내용을 입력해 주세요.",
+    "saveError": "항목을 저장하지 못했습니다.",
+    "conversion_nudge": "여정을 안전하게 보관하세요",
+    "conversion_nudge_desc": "계정을 만들어 기록을 저장하세요",
     "setup": {
       "beautifullySaid": "멋진 말이네요!",
       "callYou": "Cloudy가 당신을 뭐라고 부를까요?",
       "namePlaceholder": "당신의 이름",
       "saveProfile": "프로필 저장",
-      "reminderTitle": "언제 성찰을 도와드릴까요?",
+      "reminderTitle": "언제 돌아보기를 도와드릴까요?",
       "setReminder": "알림 설정",
-      "noThanks": "괜찮아요, 직접 기억할게요"
-    }
+      "noThanks": "괜찮습니다, 제가 기억할게요"
+    },
+    "streakNudgeTitle": "아주 잘하고 계시네요!",
+    "streakNudgeBody": "이 소중한 기억들을 잃어버리지 않도록 계정을 연결하시겠어요?",
+    "motivationTitle": "힘내세요!",
+    "motivationBody": "정말 잘하고 계세요! 하루에 단 2분씩만 투자해도 {{struggle}}이 사라지고 {{goal}}에 한 걸음 더 다가갈 수 있습니다. 계속해서 새로운 친구와 보상을 만나보세요!"
   },
   "navigation": {
-    "entry": "기록",
+    "entry": "작성",
     "journey": "여정",
     "profile": "프로필"
   },
   "profile": {
     "title": "프로필",
     "hi": "안녕하세요, {{name}}님!",
+    "friend": "친구",
     "streakDay": "{{count}}일",
     "streakTitle": "연속 기록!",
     "sections": {
@@ -46,7 +116,7 @@
       "gender": "성별",
       "location": "위치",
       "goals": "목표",
-      "struggles": "어려움"
+      "struggles": "고민"
     },
     "placeholders": {
       "setName": "이름 설정",
@@ -54,103 +124,339 @@
       "setGender": "성별 설정",
       "setCountry": "국가 설정",
       "setGoals": "목표 설정",
-      "setStruggles": "어려움 설정"
+      "setStruggles": "고민 설정"
     },
-    "logout": "로그아웃"
+    "logout": "로그아웃",
+    "setup": {
+      "aFreshStart": "새로운 시작!",
+      "nameTitle": "Cloudy가 당신을 뭐라고 부를까요?",
+      "ageTitle": "나이가 어떻게 되시나요?",
+      "genderTitle": "성별이 어떻게 되시나요?",
+      "locationTitle": "어디에 사시나요?",
+      "goalsTitle": "Cloudy를 사용하는 주요 목표는 무엇인가요?",
+      "strugglesTitle": "어떤 고민이 있으신가요?",
+      "mascotTitle": "함께할 친구를 선택하세요",
+      "seeProgress": "내 기록 보기"
+    },
+    "genders": {
+      "female": "여성",
+      "male": "남성",
+      "nonBinary": "넌바이너리",
+      "noSay": "말하고 싶지 않음"
+    },
+    "goals": {
+      "innerPeace": "내면의 평화",
+      "happiness": "행복",
+      "betterSleep": "숙면",
+      "clarity": "명료함",
+      "productivity": "생산성",
+      "selfLove": "자기 관리",
+      "focus": "집중",
+      "gratitude": "감사"
+    },
+    "struggles": {
+      "stress": "스트레스",
+      "anxiety": "불안",
+      "overthinking": "생각 과다",
+      "lowEnergy": "무기력함",
+      "sleepIssues": "수면 문제",
+      "lackOfFocus": "집중력 부족"
+    },
+    "accentColor": "포인트 색상",
+    "yourVibe": "당신의 스타일.",
+    "personalizeVibe": "당신의 에너지와 어울리는 색상으로 Cloudy를 꾸며보세요.",
+    "unlockStreak": "{{count}}일 연속 기록 시 잠금 해제"
   },
   "settings": {
     "title": "설정",
-    "dailyReminder": "일일 알림",
+    "dailyReminder": "매일 알림",
     "hapticFeedback": "진동 피드백",
     "hapticDescription": "상호작용 시 부드러운 진동",
-    "nightTheme": "흐린 밤 테마",
-    "nightDescription": "차분한 다크 모드로 전환",
-    "accentColor": "포인트 컬러",
-    "accentDescription": "앱의 주요 색상을 설정하세요",
-    "lockCloud": "클라우드 잠금",
-    "lockDescription": "생체 인식으로 일기 보호",
-    "ourHome": "홈페이지",
+    "nightTheme": "구름 낀 밤 테마",
+    "nightDescription": "차분하고 어두운 색상으로 변경",
+    "accentColor": "포인트 색상",
+    "accentDescription": "앱의 주요 색상을 설정",
+    "lockCloud": "보안 잠금",
+    "lockDescription": "일기장을 위한 생체 인식 보호",
+    "ourHome": "프로젝트 정보",
     "visitWebsite": "웹사이트 방문하기",
     "privacySecurity": "개인정보 및 보안",
-    "cloudyWhisper": "Cloudy에게 속삭임",
-    "feedbackDescription": "의견 보내기 또는 버그 제보",
+    "cloudyWhisper": "피드백 및 지원",
+    "feedbackDescription": "의견 보내기 또는 오류 보고",
     "language": "언어",
-    "languageDescription": "원하는 언어를 선택하세요"
+    "languageDescription": "선호하는 언어 선택",
+    "deleteAccount": "계정 및 데이터 삭제",
+    "remindTimeTitle": "언제 알려드릴까요?",
+    "chooseVibe": "스타일 선택",
+    "createPasswordTitle": "비밀번호 만들기",
+    "createPasswordDesc": "이메일과 비밀번호로 로그인할 수 있게 됩니다.",
+    "deleteConfirmTitle": "정말 떠나시겠어요?",
+    "deleteConfirmDesc": "모든 기억과 프로필이 영구적으로 삭제됩니다. 이 작업은 되돌릴 수 없습니다.",
+    "stayButton": "아니요, 계속 사용할래요!",
+    "deleteEverything": "네, 모두 삭제합니다",
+    "addPassword": "비밀번호 로그인 추가",
+    "addPasswordDesc": "이메일 및 비밀번호 로그인 활성화",
+    "secureJourney": "여정을 안전하게 보관하세요",
+    "secureJourneyDesc": "계정을 만들어 기록을 저장하세요",
+    "logoutTitle": "로그아웃 하시겠습니까?",
+    "loggingOut": "로그아웃 중...",
+    "notSupported": "지원되지 않음",
+    "bioNotSupportedDesc": "기기가 생체 인식을 지원하지 않거나 등록된 정보가 없습니다.",
+    "authToEnable": "잠금 설정을 위해 인증해 주세요",
+    "authToDisable": "잠금 해제를 위해 인증해 주세요",
+    "accountDeletedTitle": "계정 삭제됨",
+    "accountDeletedDesc": "데이터가 삭제되었습니다. 언젠가 다시 만나길 바랍니다.",
+    "wait": "잠시만요",
+    "passwordLengthError": "비밀번호는 6자 이상이어야 합니다.",
+    "passwordAddedTitle": "성공",
+    "passwordAddedDesc": "비밀번호가 추가되었습니다! 이제 Google이나 이메일로 로그인할 수 있습니다.",
+    "setPasswordPlaceholder": "보안 비밀번호 설정",
+    "accentColorsLockedTitle": "잠긴 기능",
+    "accentColorsLockedDesc": "60일 연속 기록을 달성하면 포인트 색상을 모두 사용할 수 있습니다!",
+    "deleteAccountErrorTitle": "오류",
+    "deleteAccountError": "계정을 삭제하지 못했습니다. 대신 로그아웃을 시도해 보세요.",
+    "english": "Korean (한국어)"
+  },
+  "logout": {
+    "title": "다음에 또 만나요!",
+    "loggingOut": "로그아웃 중...",
+    "loseAccessTitle": "잠시만요! 모든 기록이 사라집니다!",
+    "loseAccessMessage": "계정을 먼저 만들지 않으면 기록이 저장되지 않으며 다시 볼 수 없습니다.",
+    "secureAccount": "내 계정 안전하게 하기",
+    "loseData": "로그아웃하고 데이터 삭제하기",
+    "readyTitle": "로그아웃 하시겠습니까?",
+    "safeMessage": "돌아오실 때까지 소중한 기록을 안전하게 보관하겠습니다.",
+    "stay": "아니요, 계속 사용할래요!",
+    "confirm": "로그아웃"
+  },
+  "insights": {
+    "title": "분석",
+    "allTime": "전체 기간",
+    "locked": "잠김",
+    "entries": "작성 수",
+    "words": "단어 수",
+    "wordsPerEntry": "작성당 단어 수",
+    "topThemes": "주요 테마",
+    "unlockDesc": "7일 연속 기록 달성 시 잠금 해제됩니다.",
+    "trackProgress": "진척도 확인",
+    "analysis": "Cloudy 분석",
+    "numericalPatterns": "데이터로 보는 당신의 이야기",
+    "keyMetrics": "핵심 지표",
+    "totalLogs": "총 기록",
+    "avgLength": "평균 길이",
+    "maxWords": "최대 단어",
+    "timeSpent": "집중 시간",
+    "wordCount": "단어 수",
+    "writingRhythm": "글쓰기 리듬",
+    "morning": "아침",
+    "afternoon": "낮",
+    "evening": "밤",
+    "writing": "글쓰기",
+    "words_unit": "단어",
+    "logs_unit": "기록"
+  },
+  "flashback": {
+    "title": "플래시백",
+    "desc": "매일 제공되는 당신의 소중한 과거 기록들입니다.",
+    "enterMix": "추억 앨범 보기",
+    "unlockDesc": "30일 연속 기록 달성 시 잠금 해제됩니다.",
+    "cookiesDailyMix": "Cookie의 일일 믹스",
+    "uniqueBlend": "당신만의 특별한 여정",
+    "dailyServing": "오늘의 조각",
+    "menuHighlights": "주요 장면",
+    "fanFavorite": "가장 좋아한 기억",
+    "firstCourse": "첫 시작",
+    "dailySpecial": "오늘의 특별함",
+    "topPick": "최고의 기억",
+    "whereItBegan": "시작된 곳",
+    "accountAge": "가입 기간",
+    "longestGap": "최장 공백",
+    "loveMeter": "애정 지수",
+    "consistency": "꾸준함",
+    "loved": "좋아함",
+    "active": "활동적",
+    "needsMemories": "플래시백을 시작하려면 더 많은 기억이 필요해요!",
+    "tasteMemory": "이 기억을 돌아보세요"
+  },
+  "progress": {
+    "unlockedCount": "{{unlocked}}/{{total}} 해제됨",
+    "maxStreak": "최고 기록: {{count}}일",
+    "days": "일 🔥",
+    "daysActive": "{{count}}일 활동함",
+    "daysGoal": "목표: {{count}}일",
+    "description": "각 친구들은 매일의 습관을 통해 성장하는 당신의 마음의 이정표입니다.",
+    "nextReward": "{{count}}일 후 다음 보상",
+    "nextReward_one": "{{count}}일 후 다음 보상",
+    "unlockMindfulness": "{{count}}일 더 마음을 챙기면 해제됩니다.",
+    "reward": "보상",
+    "maintainHabit": "습관 유지하기",
+    "unlockedMascot": "{{name}}을(를) 잠금 해제했습니다!",
+    "rewardUnlocked": "보상 잠금 해제"
+  },
+  "companions": {
+    "SUNNY": {
+      "name": "Sunny",
+      "description": "마음 챙김의 첫 씨앗을 심습니다.",
+      "trait": "초보자",
+      "perk": "기본 경험",
+      "perkDesc": "여정이 이제 시작됩니다."
+    },
+    "BRAINY": {
+      "name": "Brainy",
+      "description": "당신 마음의 패턴을 분석합니다.",
+      "trait": "전문가",
+      "perk": "사용자 분석",
+      "perkDesc": "개인화된 분석을 확인해 보세요."
+    },
+    "DREAMY": {
+      "name": "Dreamy",
+      "description": "밤의 성찰이 가진 마법을 익힙니다.",
+      "trait": "마스터",
+      "perk": "연속 기록 보호",
+      "perkDesc": "한 달에 한 번 기록을 보호해 줍니다."
+    },
+    "COOKIE": {
+      "name": "Cookie",
+      "description": "매일의 기록으로 습관을 영양 있게 가꿉니다.",
+      "trait": "헌신가",
+      "perk": "셰프의 특선",
+      "perkDesc": "과거 기억을 담은 맛있는 믹스를 준비합니다."
+    },
+    "GROOVY": {
+      "name": "Groovy",
+      "description": "거침없는 힘으로 당신의 여정을 이끕니다.",
+      "trait": "전설",
+      "perk": "포인트 색상",
+      "perkDesc": "앱의 색상을 자유롭게 변경해 보세요."
+    },
+    "SPARKY": {
+      "name": "Sparky",
+      "description": "자기 관리의 영웅으로 새롭게 태어납니다.",
+      "trait": "영웅",
+      "perk": "인증 상태",
+      "perkDesc": "골든 프로필 배지와 인증 마크를 획득하세요."
+    }
   },
   "journey": {
-    "title": "당신의 여정",
+    "title": "나의 여정",
     "all": "전체",
     "favorites": "즐겨찾기",
-    "loading": "추억을 불러오는 중...",
-    "noMemories": "새로운 여정이 시작됩니다.",
-    "noFavorites": "즐겨찾기한 기록이 없습니다.",
-    "noMemoriesForDate": "{{date}}의 기록이 없습니다.",
-    "viewAll": "전체 기록 보기",
-    "deleteTitle": "정말 삭제할까요?",
-    "deleteMessage": "실수는 누구나 하죠! 이 추억을 정말 삭제하시겠어요?",
+    "loading": "추억들을 불러오는 중...",
+    "noMemories": "당신의 여정이 이제 막 시작되었습니다.",
+    "noFavorites": "즐겨찾는 기록이 아직 없습니다.",
+    "noMemoriesForDate": "{{date}}에 작성된 기록이 없습니다.",
+    "viewAll": "전체 보기",
+    "deleteTitle": "잠시만요, 정말인가요?",
+    "deleteMessage": "실수는 누구나 할 수 있어요! 이 기억을 정말 삭제하시겠습니까?",
     "confirmDelete": "네, 삭제합니다",
-    "cancelDelete": "아니요, 보관할게요",
+    "cancelDelete": "아니요, 유지할게요",
     "tooLateTitle": "삭제 불가",
-    "tooLateMessage": "기록은 작성 후 24시간 이내에만 삭제할 수 있습니다."
+    "tooLateMessage": "기록은 작성 후 24시간 이내에만 삭제할 수 있습니다.",
+    "chefsSpecial": "셰프의 특선",
+    "memoryInspector": "기억 돋보기"
+  },
+  "calendar": {
+    "weekdays": {
+      "short": ["일", "월", "화", "수", "목", "금", "토"]
+    }
+  },
+  "welcome": {
+    "hi": "안녕하세요, Cloudy입니다",
+    "companion": "당신의 명료한 마음을 위한 작은 친구예요."
+  },
+  "statistics": {
+    "title": "분석",
+    "analysis": "Cloudy 분석",
+    "description": "데이터로 보는 당신의 이야기",
+    "keyMetrics": "핵심 지표",
+    "writingRhythm": "글쓰기 리듬",
+    "activeDays": "활동 일수",
+    "totalLogs": "총 기록",
+    "avgLength": "평균 길이",
+    "maxWords": "최대 단어",
+    "timeSpent": "집중 시간",
+    "wordCount": "단어 수",
+    "days": "일",
+    "logs": "개",
+    "words": "단어",
+    "writing": "글쓰기",
+    "morning": "아침",
+    "afternoon": "낮",
+    "evening": "밤",
+    "topThemes": "주요 테마"
+  },
+  "summary": {
+    "title": "함께 가볼까요?",
+    "body": "연구에 따르면 매일 {{gratitude}} 하나만 적어도 {{struggle}}이 줄어들고 {{goal}}을(를) 찾는 데 도움이 된다고 합니다.",
+    "gratitude": "감사함",
+    "startWriting": "기록 시작하기",
+    "andSuffix": "외 기타",
+    "andJoin": "그리고"
+  },
+  "accents": {
+    "ORANGE": "햇살 가득 오렌지",
+    "BLUE": "바다의 블루",
+    "GREEN": "자연의 그린",
+    "PURPLE": "로열 퍼플",
+    "PINK": "은은한 핑크",
+    "TEAL": "차분한 틸"
   },
   "feedback": {
     "title": "피드백 및 지원",
-    "description": "버그를 찾으셨나요? 아이디어가 있으신가요? 아니면 그냥 인사하고 싶으신가요? 무엇이든 말씀해주세요! 웹사이트를 통해서도 연락하실 수 있어요.",
-    "placeholder": "모든 걸 말씀해주세요...",
-    "emailPlaceholder": "답변용 이메일 (선택)",
-    "sendButton": "클라우드로 보내기",
-    "waitTitle": "잠깐!",
-    "waitMessage": "보내기 전에 무언가를 적어주세요.",
+    "description": "오류를 발견하셨나요? 좋은 아이디어가 있나요? 혹은 그저 인사를 건네고 싶으신가요? 언제든 환영합니다! 웹사이트를 통해서도 연락 가능합니다.",
+    "placeholder": "자유롭게 남겨주세요...",
+    "emailPlaceholder": "답변받을 이메일 (선택)",
+    "sendButton": "구름에게 보내기",
+    "waitTitle": "잠시만요!",
+    "waitMessage": "보내기 전에 내용을 입력해 주세요.",
     "successTitle": "감사합니다!",
-    "successMessage": "피드백이 클라우드에 도착했어요. 정말 감사해요!",
-    "successButton": "천만에요!",
-    "errorTitle": "이런",
-    "errorMessage": "피드백을 보낼 수 없습니다. 다시 시도해주세요."
+    "successMessage": "소중한 의견이 잘 전달되었습니다. 감사합니다!",
+    "successButton": "천만요!"
   },
   "review": {
-    "delight": "기쁨의 순간 ✨",
+    "delight": "행복한 순간 ✨",
     "enjoyingTitle": "Cloudy와 함께하는 여정이 즐거우신가요?",
-    "enjoyingMessage": "연속 기록이 정말 대단해요! 리뷰를 공유하면 다른 사람들도 마음의 평화를 찾을 수 있어요.",
-    "rateButton": "너무 좋아요! 지금 평가하기"
+    "enjoyingMessage": "지속적인 기록이 놀랍네요! 리뷰를 남겨주시면 다른 분들도 마음의 평온을 찾는 데 큰 도움이 됩니다.",
+    "rateButton": "아주 좋아요! 별점 남기기"
   },
   "auth": {
-    "welcomeBack": "다시 오셨군요!",
-    "saveJourney": "여정 저장하기",
+    "welcomeBack": "다시 돌아오셨군요!",
+    "saveJourney": "나의 여정 저장하기",
     "missedYou": "Cloudy가 당신을 기다렸어요.",
-    "secureProgress": "진행 상황과 추억을 보호하기 위해 계정을 만드세요.",
+    "secureProgress": "기록과 추억을 안전하게 보호하기 위해 계정을 만들어 보세요.",
     "emailLabel": "이메일",
     "passwordLabel": "비밀번호",
     "signInButton": "로그인",
-    "signUpButton": "회원가입",
+    "signUpButton": "가입하기",
     "newHere": "처음이신가요? ",
     "alreadyJoined": "이미 가입하셨나요? ",
     "createAccount": "계정 만들기",
     "orDivider": "또는",
     "continueWithGoogle": "Google로 계속하기",
-    "missingInfoTitle": "정보 누락",
-    "missingInfoMessage": "이메일과 비밀번호를 모두 입력해주세요.",
-    "accountExistsTitle": "이미 존재하는 계정",
-    "accountExistsMessage": "기존 여정으로 로그인하시겠어요? 현재 임시 데이터는 병합되지 않아요.",
+    "missingInfoTitle": "정보 부족",
+    "missingInfoMessage": "이메일과 비밀번호를 입력해 주세요.",
+    "accountExistsTitle": "이미 있는 계정",
+    "accountExistsMessage": "기존 계정으로 로그인하시겠습니까? 현재 작성 중인 임시 데이터는 병합되지 않습니다.",
     "cancelButton": "취소",
     "logInButton": "로그인",
     "successTitle": "성공",
-    "journeySecured": "여정이 보호되었습니다!",
-    "confirmEmail": "계정을 확인하려면 이메일을 확인해주세요."
+    "journeySecured": "당신의 여정이 안전하게 저장되었습니다!",
+    "confirmEmail": "계정 확인을 위해 이메일을 체크해 주세요."
   },
   "journalEntry": {
-    "title": "일기",
-    "header": "좋은 것에 집중하세요.",
-    "subheader": "오늘 감사한 작은 것이 하나 있나요?",
-    "placeholder": "감사합니다...",
-    "saveButton": "기록 저장",
+    "title": "저널",
+    "header": "좋은 것에 집중해 보세요.",
+    "subheader": "오늘 감사한 작은 일은 무엇인가요?",
+    "placeholder": "오늘 감사한 마음은...",
+    "saveButton": "기록 저장하기",
     "savedTitle": "감사함이 저장되었습니다!",
-    "savedMessage": "내일 봐요!",
+    "savedMessage": "내일 또 만나요!",
     "errorTitle": "오류",
-    "errorMessage": "기록을 저장할 수 없습니다."
+    "errorMessage": "기록을 저장하지 못했습니다."
   },
   "profileNudge": {
-    "title": "여정을 보호하세요",
-    "message": "진행 상황을 클라우드에 저장하면 추억을 잃지 않아요."
+    "title": "여정을 지켜주세요",
+    "message": "소중한 추억을 잃어버리지 않도록 구름에 저장해 보세요."
   },
   "ranks": {
     "beginner": "초보자",
@@ -158,30 +464,34 @@
     "master": "마스터",
     "dedicated": "헌신가",
     "legend": "전설",
-    "hero": "HERO"
+    "hero": "영웅"
   },
   "streakLost": {
-    "title": "걱정 마세요!",
-    "message": "하루를 놓쳤지만, 그건 여정의 일부예요. 오늘 새로운 연속 기록을 시작해요!",
-    "button": "시작해요"
+    "title": "괜찮아요!",
+    "message": "하루를 놓쳤지만 그것도 여정의 일부예요. 오늘부터 새로운 기록을 시작해 봐요!",
+    "button": "시작하기"
+  },
+  "streakFreeze": {
+    "title": "기록 보호됨! ❄️",
+    "message": "기록을 놓쳤지만 Dreamy가 마법으로 당신의 기록을 지켜주었습니다. 계속 힘내세요!"
   },
   "lockScreen": {
     "title": "Cloudy는 안전합니다",
-    "subtitle": "여정을 계속하려면 잠금 해제",
+    "subtitle": "여정을 이어가려면 잠금을 해제하세요",
     "button": "잠금 해제",
-    "footer": "당신의 추억은 비공개이며 암호화됩니다"
+    "footer": "당신의 추억은 비공개로 암호화되어 보호됩니다"
   },
   "splash": {
-    "tagline": "맑은 마음을 위한 작은 동반자."
+    "tagline": "당신의 명료한 마음을 위한 작은 친구."
   },
   "lockedFeature": {
-    "locked": "잠김",
-    "unlockMessage": "이 기능을 잠금 해제하려면 한 번 {{required}}일 연속 기록을 달성하세요. 현재 {{current}}일입니다!",
-    "seeProgress": "진행 상황 보기"
+    "locked": "잠긴 기능",
+    "unlockMessage": "{{required}}일 연속 기록을 달성하면 이 기능을 사용할 수 있습니다. 현재 {{current}}일차입니다!",
+    "seeProgress": "진척도 확인"
   },
   "journalMerge": {
     "successTitle": "성공",
-    "welcomeBack": "다시 오셨군요, {{name}}님! 최근 추억을 일기에 추가했습니다.",
-    "great": "좋아요!"
+    "welcomeBack": "다시 오신 것을 환영해요, {{name}}님! 최근 작성하신 기억들을 저널에 추가했습니다.",
+    "great": "멋지네요!"
   }
 }
