--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -182,7 +182,7 @@
     "ourHome": "Наш дом",
     "visitWebsite": "Посетите наш сайт",
     "privacySecurity": "Конфиденциальность и защита",
-    "cloudyWhisper": "Поддержка и связь",
+    "cloudyWhisper": "Отзывы и поддержка",
     "feedbackDescription": "Отправить отзыв или сообщить об ошибке",
     "language": "Язык",
     "languageDescription": "Выберите предпочитаемый язык",
@@ -405,7 +405,7 @@
     "TEAL": "Спокойный бирюзовый"
   },
   "feedback": {
-    "title": "Обратная связь и поддержка",
+    "title": "Отзывы и поддержка",
     "description": "Нашли ошибку? Есть идея? Или просто хотите поздороваться? Я весь во внимании! Вы также можете связаться через наш сайт.",
     "placeholder": "Расскажите мне всё...",
     "emailPlaceholder": "Email для ответа (необязательно)",
