--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -3,46 +3,118 @@
     "save": "保存",
     "okay": "OK",
     "error": "エラー",
-    "maybeLater": "後で",
+    "maybeLater": "あとで",
     "niceToMeetYou": "はじめまして！",
     "niceToMeetYouWithName": "はじめまして、{{name}}さん！",
     "cancel": "キャンセル",
     "offlineError": "接続が切れました",
-    "offlineMessage": "オフラインのようです。安心してください、入力したテキストは消えていません！接続を確認して、もう一度保存してください。"
+    "offlineMessage": "オフラインのようです。安心してください、入力したテキストはここにあります。接続を確認して、もう一度保存してください。",
+    "version": "バージョン",
+    "madeWithLove": "あなたの心のために ❤️ を込めて作りました。",
+    "website": "ウェブサイト",
+    "ourWebsite": "公式サイト",
+    "progress": "進捗",
+    "letsStart": "はじめる",
+    "alreadyHaveAccount": "アカウントをお持ちですか？",
+    "login": "ログイン",
+    "continue": "次へ",
+    "days": "日",
+    "daysCount": "{{count}}日",
+    "day": "日",
+    "plusMore": "+{{count}}件以上",
+    "unlocked": "ロック解除！",
+    "unlockedOn": "解除日:",
+    "activeDays": "{{count}}日間活動",
+    "daysGoal": "目標: {{count}}日",
+    "daysLeft": "あと{{count}}日",
+    "daysLeftLabel": "残り日数",
+    "hour": "時間",
+    "min": "分",
+    "min_short": "分",
+    "less": "少ない",
+    "more": "多い",
+    "activity": "アクティビティ",
+    "lastMonths": "最近の{{count}}ヶ月",
+    "maxStreak": "最高記録",
+    "nextMilestone": "次の目標",
+    "reachMascot": "{{name}}に到達",
+    "unlockMascot": "{{name}}を解除",
+    "dayStreak": "継続: {{count}}日",
+    "unlockedOnDay": "{{date}}に解除 • {{count}}日目",
+    "genericTitles": [
+      "旅のひととき",
+      "心に留めたいこと",
+      "あなたの物語の一部",
+      "今日を振り返って",
+      "マインドフルな記録",
+      "言葉で綴る旅",
+      "大切にしたい思い",
+      "個人的な内省"
+    ],
+    "looksGreat": "いいですね",
+    "swipeToExplore": "スワイプして見る",
+    "deleteMemoryTitle": "この思い出を削除しますか？",
+    "deleteMemoryDesc": "この操作は取り消せません。本当に削除しますか？",
+    "noMemoriesFound": "思い出が見つかりませんでした。",
+    "journal": "ジャーナル",
+    "linkAccount": "アカウント連携",
+    "keepItUp": "その調子！",
+    "privacyPolicy": "プライバシーポリシー",
+    "termsOfService": "利用規約",
+    "lastUpdated": "最終更新",
+    "hero": "ヒーロー",
+    "beginner": "ビギナー",
+    "expert": "エキスパート",
+    "master": "マスター",
+    "dedicated": "継続の達人",
+    "legend": "レジェンド",
+    "goodbye": "さようなら",
+    "great": "素晴らしい",
+    "updateTime": "時間を更新",
+    "setPassword": "パスワードを設定",
+    "locale_code": "ja",
+    "appName": "Cloudy"
   },
   "home": {
-    "dailyGratitude": "今日の感謝",
-    "placeholder": "今日はどんな日でしたか？",
+    "dailyGratitude": "毎日の感謝",
+    "placeholder": "今日はどんなことがありましたか？",
     "today": "今日",
-    "charCount": "{{count}} / 200 文字",
+    "charCount": "{{count}} / 200文字",
     "emptyEntryTitle": "未入力",
-    "emptyEntryMessage": "保存するには何か入力してください。",
+    "emptyEntryMessage": "保存する内容を入力してください。",
     "saveError": "保存できませんでした。",
+    "conversion_nudge": "旅を安全に守る",
+    "conversion_nudge_desc": "アカウントを作成して進捗を保存しましょう",
     "setup": {
       "beautifullySaid": "素敵な言葉ですね！",
-      "callYou": "Cloudyに何と呼ばれたいですか？",
+      "callYou": "Cloudyになんと呼んでほしいですか？",
       "namePlaceholder": "お名前",
       "saveProfile": "プロフィールを保存",
-      "reminderTitle": "いつ通知を送りますか？",
-      "setReminder": "通知を設定",
-      "noThanks": "後で設定する"
-    }
+      "reminderTitle": "いつ振り返りをお手伝いしましょうか？",
+      "setReminder": "リマインダーを設定",
+      "noThanks": "結構です、自分で覚えています"
+    },
+    "streakNudgeTitle": "順調ですね！",
+    "streakNudgeBody": "この大切な思い出を失わないために、アカウントを連携しませんか？",
+    "motivationTitle": "その調子で続けましょう！",
+    "motivationBody": "素晴らしいですね！1日たった2分続けるだけで、{{struggle}}が和らぎ、{{goal}}に近づくことができます。これからも新しい仲間や報酬を見つけていきましょう！"
   },
   "navigation": {
     "entry": "記録",
     "journey": "ジャーニー",
-    "profile": "プロフ"
+    "profile": "プロフィール"
   },
   "profile": {
     "title": "プロフィール",
     "hi": "こんにちは、{{name}}さん！",
-    "streakDay": "{{count}} 日目",
-    "streakTitle": "継続中!",
+    "friend": "フレンド",
+    "streakDay": "{{count}}日",
+    "streakTitle": "継続記録！",
     "sections": {
       "name": "名前",
       "age": "年齢",
       "gender": "性別",
-      "location": "地域",
+      "location": "場所",
       "goals": "目標",
       "struggles": "悩み"
     },
@@ -50,136 +122,376 @@
       "setName": "名前を設定",
       "setAge": "年齢を設定",
       "setGender": "性別を設定",
-      "setCountry": "国・地域を設定",
+      "setCountry": "国を設定",
       "setGoals": "目標を設定",
       "setStruggles": "悩みを設定"
     },
-    "logout": "ログアウト"
+    "logout": "ログアウト",
+    "setup": {
+      "aFreshStart": "新しい始まり！",
+      "nameTitle": "Cloudyになんと呼んでほしいですか？",
+      "ageTitle": "おいくつですか？",
+      "genderTitle": "性別を教えてください",
+      "locationTitle": "お住まいはどちらですか？",
+      "goalsTitle": "Cloudyを使う主な目的は何ですか？",
+      "strugglesTitle": "最近、どんな悩みがありますか？",
+      "mascotTitle": "パートナーを選んでください",
+      "seeProgress": "進捗を見る"
+    },
+    "genders": {
+      "female": "女性",
+      "male": "男性",
+      "nonBinary": "ノンバイナリー",
+      "noSay": "回答しない"
+    },
+    "goals": {
+      "innerPeace": "心の平和",
+      "happiness": "幸福",
+      "betterSleep": "質の高い睡眠",
+      "clarity": "思考の明快さ",
+      "productivity": "生産性",
+      "selfLove": "自己愛",
+      "focus": "集中",
+      "gratitude": "感謝"
+    },
+    "struggles": {
+      "stress": "ストレス",
+      "anxiety": "不安",
+      "overthinking": "考えすぎ",
+      "lowEnergy": "無気力",
+      "sleepIssues": "睡眠の問題",
+      "lackOfFocus": "集中力不足"
+    },
+    "accentColor": "アクセントカラー",
+    "yourVibe": "あなたのスタイル。",
+    "personalizeVibe": "あなたのエネルギーに合った色でCloudyをカスタマイズしましょう。",
+    "unlockStreak": "{{count}}日の継続で解除"
   },
   "settings": {
     "title": "設定",
-    "dailyReminder": "デイリー通知",
+    "dailyReminder": "毎日リマインダー",
     "hapticFeedback": "触覚フィードバック",
     "hapticDescription": "操作時の心地よい振動",
-    "nightTheme": "ダークモード",
-    "nightDescription": "落ち着いたダークカラーに切り替え",
+    "nightTheme": "曇り空の夜テーマ",
+    "nightDescription": "落ち着いたダークカラーに変更",
     "accentColor": "アクセントカラー",
     "accentDescription": "アプリのメインカラーをカスタマイズ",
-    "lockCloud": "アプリロック",
-    "lockDescription": "生体認証で日記を保護",
-    "ourHome": "公式サイト",
-    "visitWebsite": "公式サイトにアクセス",
+    "lockCloud": "セキュリティロック",
+    "lockDescription": "日記のための生体認証保護",
+    "ourHome": "プロジェクトについて",
+    "visitWebsite": "ウェブサイトを訪問",
     "privacySecurity": "プライバシーとセキュリティ",
-    "cloudyWhisper": "Cloudyへの声",
-    "feedbackDescription": "フィードバックやバグ報告を送信",
+    "cloudyWhisper": "フィードバックとサポート",
+    "feedbackDescription": "意見を送る・バグを報告する",
     "language": "言語",
-    "languageDescription": "使用する言語を選択"
+    "languageDescription": "使用する言語を選択",
+    "deleteAccount": "アカウントとデータの削除",
+    "remindTimeTitle": "いつ通知しますか？",
+    "chooseVibe": "スタイルを選択",
+    "createPasswordTitle": "パスワードを作成",
+    "createPasswordDesc": "メールアドレスとこのパスワードでログインできるようになります。",
+    "deleteConfirmTitle": "本当に退会しますか？",
+    "deleteConfirmDesc": "すべての思い出とプロフィールが完全に削除されます。この操作は取り消せません。",
+    "stayButton": "いいえ、使い続けます！",
+    "deleteEverything": "はい、すべて削除します",
+    "addPassword": "パスワードログインを追加",
+    "addPasswordDesc": "メールアドレスとパスワードでのログインを有効にする",
+    "secureJourney": "旅を安全に守る",
+    "secureJourneyDesc": "アカウントを作成して進捗を保存しましょう",
+    "logoutTitle": "ログアウトしますか？",
+    "loggingOut": "ログアウト中...",
+    "notSupported": "非対応",
+    "bioNotSupportedDesc": "お使いのデバイスは生体認証に対応していないか、登録されていません。",
+    "authToEnable": "ロックを有効にするために認証してください",
+    "authToDisable": "ロックを無効にするために認証してください",
+    "accountDeletedTitle": "アカウントを削除しました",
+    "accountDeletedDesc": "データが削除されました。またいつかお会いできるのを楽しみにしています。",
+    "wait": "お待ちください",
+    "passwordLengthError": "パスワードは6文字以上で入力してください。",
+    "passwordAddedTitle": "完了",
+    "passwordAddedDesc": "パスワードが追加されました。Googleまたはメールでログイン可能です。",
+    "setPasswordPlaceholder": "安全なパスワードを設定",
+    "accentColorsLockedTitle": "ロック中の機能",
+    "accentColorsLockedDesc": "60日間継続すると、すべてのアクセントカラーが使えるようになります！",
+    "deleteAccountErrorTitle": "エラー",
+    "deleteAccountError": "アカウントを削除できませんでした。代わりにログアウトを試してください。",
+    "english": "Japanese (日本語)"
+  },
+  "logout": {
+    "title": "また会いましょう！",
+    "loggingOut": "ログアウト中...",
+    "loseAccessTitle": "お待ちください！すべて失われます！",
+    "loseAccessMessage": "アカウントを作成しないと、進捗が保存されず、アクセスできなくなります。",
+    "secureAccount": "アカウントを守る",
+    "loseData": "ログアウトしてデータを削除",
+    "readyTitle": "ログアウトしますか？",
+    "safeMessage": "戻ってくるまで、あなたの大切な記録を安全に保管します。",
+    "stay": "いいえ、使い続けます！",
+    "confirm": "ログアウト"
+  },
+  "insights": {
+    "title": "インサイト",
+    "allTime": "全期間",
+    "locked": "ロック",
+    "entries": "記録数",
+    "words": "単語数",
+    "wordsPerEntry": "記録あたりの単語数",
+    "topThemes": "主なテーマ",
+    "unlockDesc": "7日間継続すると解除されます。",
+    "trackProgress": "進捗を確認",
+    "analysis": "Cloudy分析",
+    "numericalPatterns": "データで見るあなたの物語",
+    "keyMetrics": "主要な指標",
+    "totalLogs": "総記録数",
+    "avgLength": "平均の長さ",
+    "maxWords": "最多単語数",
+    "timeSpent": "集中した時間",
+    "wordCount": "単語数",
+    "writingRhythm": "書くリズム",
+    "morning": "朝",
+    "afternoon": "昼",
+    "evening": "夜",
+    "writing": "書くこと",
+    "words_unit": "単語",
+    "logs_unit": "記録"
+  },
+  "flashback": {
+    "title": "フラッシュバック",
+    "desc": "毎日お届けする、あなたの大切な過去の記録です。",
+    "enterMix": "ミックスを見る",
+    "unlockDesc": "30日間継続すると解除されます。",
+    "cookiesDailyMix": "Cookieのデイリーミックス",
+    "uniqueBlend": "あなただけの特別なジャーニー",
+    "dailyServing": "今日の一皿",
+    "menuHighlights": "ハイライト",
+    "fanFavorite": "お気に入りの思い出",
+    "firstCourse": "最初の一歩",
+    "dailySpecial": "本日のスペシャル",
+    "topPick": "最高の思い出",
+    "whereItBegan": "始まりの場所",
+    "accountAge": "利用期間",
+    "longestGap": "最長の空白",
+    "loveMeter": "愛情指数",
+    "consistency": "継続性",
+    "loved": "愛着",
+    "active": "アクティブ",
+    "needsMemories": "フラッシュバックを始めるには、もっと思い出が必要です！",
+    "tasteMemory": "この思い出を振り返る"
+  },
+  "progress": {
+    "unlockedCount": "{{unlocked}}/{{total}} 解除済み",
+    "maxStreak": "最高記録: {{count}}日",
+    "days": "日 🔥",
+    "daysActive": "{{count}}日間活動",
+    "daysGoal": "目標: {{count}}日",
+    "description": "それぞれの仲間は、日々の習慣を通じて成長するあなたの心の道標です。",
+    "nextReward": "あと{{count}}日で次の報酬",
+    "nextReward_one": "あと{{count}}日で次の報酬",
+    "unlockMindfulness": "あと{{count}}日間続けると解除されます。",
+    "reward": "報酬",
+    "maintainHabit": "習慣を続ける",
+    "unlockedMascot": "{{name}}が仲間になりました！",
+    "rewardUnlocked": "報酬を獲得！"
+  },
+  "companions": {
+    "SUNNY": {
+      "name": "Sunny",
+      "description": "マインドフルネスの最初の種をまきます。",
+      "trait": "ビギナー",
+      "perk": "基本体験",
+      "perkDesc": "ジャーニーが今始まります。"
+    },
+    "BRAINY": {
+      "name": "Brainy",
+      "description": "あなたの心のパターンを分析します。",
+      "trait": "エキスパート",
+      "perk": "ユーザー分析",
+      "perkDesc": "あなただけの分析データを見ることができます。"
+    },
+    "DREAMY": {
+      "name": "Dreamy",
+      "description": "夜の振り返りの魔法をマスターします。",
+      "trait": "マスター",
+      "perk": "継続記録の保存",
+      "perkDesc": "月に一度、継続記録を守ってくれます。"
+    },
+    "COOKIE": {
+      "name": "Cookie",
+      "description": "日々の記録で習慣を豊かに育みます。",
+      "trait": "継続の達人",
+      "perk": "シェフの特選",
+      "perkDesc": "過去の思い出を詰めた美味しいミックスを準備します。"
+    },
+    "GROOVY": {
+      "name": "Groovy",
+      "description": "確かな自信であなたの旅をリードします。",
+      "trait": "レジェンド",
+      "perk": "アクセントカラー",
+      "perkDesc": "アプリの色を好きな色に変更できます。"
+    },
+    "SPARKY": {
+      "name": "Sparky",
+      "description": "セルフケアのヒーローへと究極の進化を遂げます。",
+      "trait": "ヒーロー",
+      "perk": "認証済みステータス",
+      "perkDesc": "黄金のプロフィールバッジと認証マークを獲得。"
+    }
   },
   "journey": {
-    "title": "あなたのジャーニー",
+    "title": "あなたの旅",
     "all": "すべて",
     "favorites": "お気に入り",
-    "loading": "読み込み中...",
-    "noMemories": "新しい旅が始まります。",
-    "noFavorites": "お気に入りはまだありません。",
-    "noMemoriesForDate": "{{date}} の記録は見つかりませんでした。",
-    "viewAll": "すべての記録を表示",
-    "deleteTitle": "削除しますか？",
-    "deleteMessage": "この記録を削除してもよろしいですか？",
-    "confirmDelete": "削除する",
-    "cancelDelete": "キャンセル",
-    "tooLateTitle": "削除不可",
-    "tooLateMessage": "作成から24時間を経過した記録は削除できません。"
+    "loading": "思い出を読み込み中...",
+    "noMemories": "あなたの旅はまだ始まったばかりです。",
+    "noFavorites": "お気に入りの記録はまだありません。",
+    "noMemoriesForDate": "{{date}}の記録は見つかりませんでした。",
+    "viewAll": "すべての記録を見る",
+    "deleteTitle": "お待ちください、本当ですか？",
+    "deleteMessage": "間違いは誰にでもあります。この記憶を本当に削除しますか？",
+    "confirmDelete": "はい、削除します",
+    "cancelDelete": "いいえ、残します",
+    "tooLateTitle": "削除できません",
+    "tooLateMessage": "記録は作成後24時間以内のみ削除可能です。",
+    "chefsSpecial": "シェフの特選",
+    "memoryInspector": "記憶の拡大鏡"
+  },
+  "calendar": {
+    "weekdays": {
+      "short": ["日", "月", "火", "水", "木", "金", "土"]
+    }
+  },
+  "welcome": {
+    "hi": "こんにちは、Cloudyです",
+    "companion": "あなたの心を整えるための小さなパートナーです。"
+  },
+  "statistics": {
+    "title": "インサイト",
+    "analysis": "Cloudy分析",
+    "description": "データで見るあなたの物語",
+    "keyMetrics": "主要な指標",
+    "writingRhythm": "書くリズム",
+    "activeDays": "活動日数",
+    "totalLogs": "総記録数",
+    "avgLength": "平均の長さ",
+    "maxWords": "最多単語数",
+    "timeSpent": "集中した時間",
+    "wordCount": "単語数",
+    "days": "日",
+    "logs": "件",
+    "words": "単語",
+    "writing": "書くこと",
+    "morning": "朝",
+    "afternoon": "昼",
+    "evening": "夜",
+    "topThemes": "主なテーマ"
+  },
+  "summary": {
+    "title": "一緒に目標を目指しましょう。",
+    "body": "研究によると、1日{{gratitude}}ひとつ書くだけで{{struggle}}が和らぎ、{{goal}}を見つける助けになると言われています。",
+    "gratitude": "感謝の気持ち",
+    "startWriting": "記録をはじめる",
+    "andSuffix": "など",
+    "andJoin": "と"
+  },
+  "accents": {
+    "ORANGE": "太陽のオレンジ",
+    "BLUE": "オーシャンブルー",
+    "GREEN": "ネイチャーグリーン",
+    "PURPLE": "ロイヤルパープル",
+    "PINK": "ローズピンク",
+    "TEAL": "穏やかなティール"
   },
   "feedback": {
-    "title": "フィードバック＆サポート",
-    "description": "バグを見つけましたか？アイデアがありますか？それとも挨拶したいだけ？何でも聞いてください！ウェブサイトからもご連絡いただけます。",
-    "placeholder": "何でもお聞かせください...",
-    "emailPlaceholder": "返信用メール（任意）",
+    "title": "フィードバックとサポート",
+    "description": "バグを見つけましたか？アイデアがありますか？それとも挨拶だけ？どんな声でもお待ちしています。ウェブサイトからも連絡可能です。",
+    "placeholder": "自由に入力してください...",
+    "emailPlaceholder": "返信用のメールアドレス（任意）",
     "sendButton": "クラウドに送信",
-    "waitTitle": "待って！",
-    "waitMessage": "送信する前に何か書いてください。",
+    "waitTitle": "お待ちください！",
+    "waitMessage": "送信する前に入力内容を確認してください。",
     "successTitle": "ありがとうございます！",
-    "successMessage": "フィードバックがクラウドに届きました。感謝します！",
-    "successButton": "どういたしまして！",
-    "errorTitle": "おっと",
-    "errorMessage": "フィードバックを送信できませんでした。もう一度お試しください。"
+    "successMessage": "フィードバックが届きました。感謝いたします！",
+    "successButton": "どういたしまして！"
   },
   "review": {
-    "delight": "喜びの瞬間 ✨",
-    "enjoyingTitle": "Cloudyとの旅を楽しんでいますか？",
-    "enjoyingMessage": "すごい継続記録ですね！レビューを共有すると、他の人も心安らぎを見つけられます。",
-    "rateButton": "気に入った！今すぐ評価"
+    "delight": "幸せな瞬間 ✨",
+    "enjoyingTitle": "Cloudyでの体験はいかがですか？",
+    "enjoyingMessage": "継続記録が素晴らしいですね！レビューを投稿していただけると、他の人が心の平穏を見つける助けにもなります。",
+    "rateButton": "最高です！評価する"
   },
   "auth": {
     "welcomeBack": "おかえりなさい！",
-    "saveJourney": "旅を保存",
-    "missedYou": "Cloudyがあなたを待っていました。",
-    "secureProgress": "進捗と思い出を守るためにアカウントを作成してください。",
-    "emailLabel": "メール",
+    "saveJourney": "ジャーニーを保存",
+    "missedYou": "Cloudyはあなたを待っていました。",
+    "secureProgress": "記録と思い出を安全に守るために、アカウントを作成しましょう。",
+    "emailLabel": "メールアドレス",
     "passwordLabel": "パスワード",
     "signInButton": "ログイン",
-    "signUpButton": "新規登録",
-    "newHere": "初めてですか？",
-    "alreadyJoined": "登録済みですか？",
+    "signUpButton": "登録",
+    "newHere": "はじめてですか？ ",
+    "alreadyJoined": "登録済みですか？ ",
     "createAccount": "アカウント作成",
     "orDivider": "または",
-    "continueWithGoogle": "Googleで続ける",
-    "missingInfoTitle": "情報不足",
-    "missingInfoMessage": "メールとパスワードの両方を入力してください。",
-    "accountExistsTitle": "アカウントは既に存在します",
-    "accountExistsMessage": "既存の旅にログインしますか？現在の一時データは統合されません。",
+    "continueWithGoogle": "Googleで続行",
+    "missingInfoTitle": "情報の不足",
+    "missingInfoMessage": "メールアドレスとパスワードを入力してください。",
+    "accountExistsTitle": "登録済みのアカウント",
+    "accountExistsMessage": "既存のアカウントでログインしますか？現在のデータは同期されませんのでご注意ください。",
     "cancelButton": "キャンセル",
     "logInButton": "ログイン",
     "successTitle": "成功",
-    "journeySecured": "旅が保護されました！",
-    "confirmEmail": "アカウントを確認するためにメールをご確認ください。"
+    "journeySecured": "ジャーニーが安全に保存されました！",
+    "confirmEmail": "メールを確認して登録を完了させてください。"
   },
   "journalEntry": {
     "title": "ジャーナル",
-    "header": "良いことに焦点を当てよう。",
-    "subheader": "今日、感謝している小さなことは何ですか？",
-    "placeholder": "感謝しています...",
+    "header": "良いことに目を向けましょう。",
+    "subheader": "今日あった小さな感謝を教えてください。",
+    "placeholder": "感謝していることは...",
     "saveButton": "記録を保存",
     "savedTitle": "感謝を保存しました！",
-    "savedMessage": "また明日！",
+    "savedMessage": "また明日お会いしましょう！",
     "errorTitle": "エラー",
-    "errorMessage": "記録を保存できませんでした。"
+    "errorMessage": "保存できませんでした。"
   },
   "profileNudge": {
-    "title": "旅を守ろう",
-    "message": "進捗をクラウドに保存して、思い出を失わないようにしましょう。"
+    "title": "旅を守りましょう",
+    "message": "思い出を失わないように、クラウドに保存しましょう。"
   },
   "ranks": {
-    "beginner": "初心者",
-    "expert": "上級者",
+    "beginner": "ビギナー",
+    "expert": "エキスパート",
     "master": "マスター",
-    "dedicated": "熱心",
+    "dedicated": "継続の達人",
     "legend": "レジェンド",
-    "hero": "HERO"
+    "hero": "ヒーロー"
   },
   "streakLost": {
     "title": "気にしないで！",
-    "message": "1日逃してしまったけど、それは旅の一部。今日から新しいストリークを始めましょう！",
-    "button": "始めよう"
+    "message": "1日お休みしましたが、それも旅の一部です。今日からまた新しく始めていきましょう！",
+    "button": "はじめる"
+  },
+  "streakFreeze": {
+    "title": "記録を保護しました！ ❄️",
+    "message": "1日お休みしましたが、Dreamyが魔法で記録を守ってくれました。その調子です！"
   },
   "lockScreen": {
     "title": "Cloudyは安全です",
-    "subtitle": "旅を続けるためにロックを解除",
+    "subtitle": "ロックを解除してジャーニーを続けましょう",
     "button": "ロック解除",
-    "footer": "あなたの思い出はプライベートで暗号化されています"
+    "footer": "あなたの思い出は暗号化され、プライバシーが守られています"
   },
   "splash": {
-    "tagline": "心をクリアにする小さなパートナー。"
+    "tagline": "あなたの心を整えるための小さなパートナー。"
   },
   "lockedFeature": {
-    "locked": "ロック中",
-    "unlockMessage": "この機能をアンロックするには、{{required}}日連続を一度達成してください。現在{{current}}日です！",
-    "seeProgress": "進捗を見る"
+    "locked": "ロック中の機能",
+    "unlockMessage": "{{required}}日間継続すると、この機能が使えるようになります。現在は{{current}}日目です。",
+    "seeProgress": "進捗を確認"
   },
   "journalMerge": {
     "successTitle": "成功",
-    "welcomeBack": "おかえりなさい、{{name}}さん！最近の思い出をジャーナルに追加しました。",
-    "great": "いいね！"
+    "welcomeBack": "おかえりなさい、{{name}}さん！最近の記録をジャーナルに追加しました。",
+    "great": "素晴らしい！"
   }
 }
