--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -1,185 +1,497 @@
 {
   "common": {
     "save": "保存",
-    "okay": "好的",
+    "okay": "确定",
     "error": "错误",
-    "maybeLater": "稍后再说",
+    "maybeLater": "以后再说",
     "niceToMeetYou": "很高兴见到你！",
     "niceToMeetYouWithName": "很高兴见到你，{{name}}！",
     "cancel": "取消",
-    "offlineError": "连接中断",
-    "offlineMessage": "您似乎处于离线状态。别担心，您的文字还在！请检查网络连接并重试保存。"
+    "offlineError": "由于网络连接问题操作失败",
+    "offlineMessage": "您目前似乎处于离线状态。别担心，您的文字还在！请检查网络连接后重试。",
+    "version": "版本",
+    "madeWithLove": "用心 ❤️ 呵护您的心灵。",
+    "website": "网站",
+    "ourWebsite": "我们的官方网站",
+    "progress": "进度",
+    "letsStart": "让我们开始吧",
+    "alreadyHaveAccount": "已经有账号了？",
+    "login": "登录",
+    "continue": "继续",
+    "days": "天",
+    "daysCount": "{{count}} 天",
+    "day": "天",
+    "plusMore": "+{{count}} 更多",
+    "unlocked": "已解锁！",
+    "unlockedOn": "解锁于",
+    "activeDays": "累计打卡 {{count}} 天",
+    "daysGoal": "目标：{{count}} 天",
+    "daysLeft": "还剩 {{count}} 天",
+    "daysLeftLabel": "剩余天数",
+    "hour": "小时",
+    "min": "分钟",
+    "min_short": "分",
+    "less": "更少",
+    "more": "更多",
+    "activity": "活动",
+    "lastMonths": "最近 {{count}} 个月",
+    "maxStreak": "最高连续打卡",
+    "nextMilestone": "下一个里程碑",
+    "reachMascot": "达到 {{name}}",
+    "unlockMascot": "解锁 {{name}}",
+    "dayStreak": "连续打卡：{{count}} 天",
+    "unlockedOnDay": "解锁于 {{date}} • 第 {{count}} 天",
+    "genericTitles": [
+      "旅程中的一刻",
+      "值得铭记的想法",
+      "你故事中的碎片",
+      "对今天的反思",
+      "正念的记录",
+      "用文字记录旅程",
+      "想要珍藏的想法",
+      "个人反思"
+    ],
+    "looksGreat": "看起来很棒",
+    "swipeToExplore": "滑动浏览",
+    "deleteMemoryTitle": "删除记忆？",
+    "deleteMemoryDesc": "此操作无法撤销。你确定吗？",
+    "noMemoriesFound": "未发现记忆。",
+    "journal": "日记",
+    "linkAccount": "关联账号",
+    "keepItUp": "继续加油！",
+    "privacyPolicy": "隐私政策",
+    "termsOfService": "服务条款",
+    "lastUpdated": "最后更新",
+    "hero": "英雄",
+    "beginner": "初学者",
+    "expert": "专家",
+    "master": "大师",
+    "dedicated": "专注者",
+    "legend": "传奇",
+    "goodbye": "再见",
+    "great": "太棒了",
+    "updateTime": "更新时间",
+    "setPassword": "设置密码",
+    "locale_code": "zh",
+    "appName": "Cloudy"
   },
   "home": {
-    "dailyGratitude": "每日感悟",
-    "placeholder": "今天有什么想分享的吗？",
+    "dailyGratitude": "每日感恩",
+    "placeholder": "你今天在想什么？",
     "today": "今天",
-    "charCount": "{{count}} / 200 字",
+    "charCount": "{{count}} / 200 字符",
     "emptyEntryTitle": "内容为空",
-    "emptyEntryMessage": "写点什么再保存吧。",
-    "saveError": "保存失败。",
+    "emptyEntryMessage": "请输入一些内容再保存。",
+    "saveError": "无法保存您的内容。",
+    "conversion_nudge": "保障您的旅程",
+    "conversion_nudge_desc": "创建一个账号以保存您的进度",
     "setup": {
-      "beautifullySaid": "说得真好！",
-      "callYou": "Cloudy 该怎么称呼你？",
+      "beautifullySaid": "说得太好了！",
+      "callYou": "Cloudy 应该怎么称呼你？",
       "namePlaceholder": "你的名字",
       "saveProfile": "保存个人资料",
-      "reminderTitle": "什么时候提醒你记录心情？",
+      "reminderTitle": "我应该什么时候提醒你进行反思？",
       "setReminder": "设置提醒",
-      "noThanks": "不用了，我自己能记住"
-    }
+      "noThanks": "不用了，我会记住的"
+    },
+    "streakNudgeTitle": "你做得非常棒！",
+    "streakNudgeBody": "是否关联账号以确保记忆永不丢失？",
+    "motivationTitle": "保持动力！",
+    "motivationBody": "你做得太棒了！每天坚持 2 分钟可以帮助缓解{{struggle}}，让你离{{goal}}更近一步。继续努力以解锁更多朋友和奖励吧！"
   },
   "navigation": {
     "entry": "记录",
-    "journey": "时光",
-    "profile": "我的"
+    "journey": "旅程",
+    "profile": "个人资料"
   },
   "profile": {
     "title": "个人资料",
     "hi": "你好，{{name}}！",
+    "friend": "朋友",
     "streakDay": "{{count}} 天",
-    "streakTitle": "连续记录!",
+    "streakTitle": "连续打卡！",
     "sections": {
-      "name": "姓名",
+      "name": "名字",
       "age": "年龄",
       "gender": "性别",
-      "location": "地区",
+      "location": "位置",
       "goals": "目标",
       "struggles": "困扰"
     },
     "placeholders": {
-      "setName": "设置姓名",
+      "setName": "设置名字",
       "setAge": "设置年龄",
       "setGender": "设置性别",
-      "setCountry": "设置国家/地区",
+      "setCountry": "设置国家",
       "setGoals": "设置目标",
       "setStruggles": "设置困扰"
     },
-    "logout": "退出登录"
+    "logout": "注销",
+    "setup": {
+      "aFreshStart": "崭新的开始！",
+      "nameTitle": "Cloudy 应该怎么称呼你？",
+      "ageTitle": "你今年多大了？",
+      "genderTitle": "你的性别认同是？",
+      "locationTitle": "你来自哪里？",
+      "goalsTitle": "你使用 Cloudy 的主要目标是什么？",
+      "strugglesTitle": "最近有什么让你困扰的事情吗？",
+      "mascotTitle": "选择你的伙伴",
+      "seeProgress": "查看进度"
+    },
+    "genders": {
+      "female": "女性",
+      "male": "男性",
+      "nonBinary": "非二元性别",
+      "noSay": "不想透露"
+    },
+    "goals": {
+      "innerPeace": "内心平静",
+      "happiness": "幸福",
+      "betterSleep": "更好睡眠",
+      "clarity": "头脑清明",
+      "productivity": "高效生产",
+      "selfLove": "关爱自己",
+      "focus": "专注",
+      "gratitude": "感恩"
+    },
+    "struggles": {
+      "stress": "压力",
+      "anxiety": "焦虑",
+      "overthinking": "想太多",
+      "lowEnergy": "精力不足",
+      "sleepIssues": "睡眠问题",
+      "lackOfFocus": "缺乏专注"
+    },
+    "accentColor": "主题颜色",
+    "yourVibe": "你的风格。",
+    "personalizeVibe": "用匹配你能量的颜色来个性化 Cloudy。",
+    "unlockStreak": "在连续打卡 {{count}} 天时解锁"
   },
   "settings": {
     "title": "设置",
     "dailyReminder": "每日提醒",
     "hapticFeedback": "触感反馈",
     "hapticDescription": "交互时的轻微震动",
-    "nightTheme": "深色模式",
-    "nightDescription": "切换到宁静的深色色调",
-    "accentColor": "主题色",
-    "accentDescription": "个性化应用的主题颜色",
-    "lockCloud": "应用锁",
+    "nightTheme": "多云之夜主题",
+    "nightDescription": "切换到平静的深色调",
+    "accentColor": "主题颜色",
+    "accentDescription": "自定义应用的主色调",
+    "lockCloud": "安全锁定",
     "lockDescription": "为你的日记提供生物识别保护",
-    "ourHome": "官方网站",
-    "visitWebsite": "访问我们的官方网站",
+    "ourHome": "我们的家",
+    "visitWebsite": "访问我们的网站",
     "privacySecurity": "隐私与安全",
-    "cloudyWhisper": "Cloudy 私语",
+    "cloudyWhisper": "反馈与支持",
     "feedbackDescription": "发送反馈或报告问题",
     "language": "语言",
-    "languageDescription": "选择你偏好的语言"
+    "languageDescription": "选择您偏好的语言",
+    "deleteAccount": "删除账号和数据",
+    "remindTimeTitle": "什么时候提醒你？",
+    "chooseVibe": "选择你的风格",
+    "createPasswordTitle": "创建密码",
+    "createPasswordDesc": "这将允许你使用邮箱和该密码登录。",
+    "deleteConfirmTitle": "你确定要离开吗？",
+    "deleteConfirmDesc": "这将永久删除你的所有记忆和个人资料。此操作无法撤销。",
+    "stayButton": "等等，我留下！",
+    "deleteEverything": "是的，删除所有内容",
+    "addPassword": "添加密码登录",
+    "addPasswordDesc": "启用邮箱和密码登录",
+    "secureJourney": "保障您的旅程",
+    "secureJourneyDesc": "创建一个账号以保存您的进度",
+    "logoutTitle": "准备好注销了吗？",
+    "loggingOut": "正在注销...",
+    "notSupported": "不支持",
+    "bioNotSupportedDesc": "您的设备不支持生物识别或未录入相关信息。",
+    "authToEnable": "通过身份验证以开启锁定",
+    "authToDisable": "通过身份验证以关闭锁定",
+    "accountDeletedTitle": "账号已删除",
+    "accountDeletedDesc": "您的数据已被移除。希望有一天能再次见到您。",
+    "wait": "请稍候",
+    "passwordLengthError": "密码必须至少为 6 位字符。",
+    "passwordAddedTitle": "成功",
+    "passwordAddedDesc": "密码已添加！现在您可以使用 Google 或邮箱登录了。",
+    "setPasswordPlaceholder": "设置一个安全的密码",
+    "accentColorsLockedTitle": "功能已锁定",
+    "accentColorsLockedDesc": "达到连续打卡 60 天即可解锁主题颜色！",
+    "deleteAccountErrorTitle": "错误",
+    "deleteAccountError": "账号无法删除。请尝试注销账号。",
+    "english": "Chinese (中文)"
+  },
+  "logout": {
+    "title": "回头见！",
+    "loggingOut": "正在注销...",
+    "loseAccessTitle": "等等！你会失去一切！",
+    "loseAccessMessage": "如果不先创建账号，您的进度将不会被保存，您也将失去访问权限。",
+    "secureAccount": "保障我的账号",
+    "loseData": "注销并丢失数据",
+    "readyTitle": "准备好注销了吗？",
+    "safeMessage": "我们会安全地保存您的进度，直到您回来。",
+    "stay": "等等，我留下！",
+    "confirm": "注销"
+  },
+  "insights": {
+    "title": "洞察",
+    "allTime": "所有时间",
+    "locked": "已锁定",
+    "entries": "记录数",
+    "words": "词数",
+    "wordsPerEntry": "每篇词数",
+    "topThemes": "核心主题",
+    "unlockDesc": "达到连续打卡 7 天即可解锁。",
+    "trackProgress": "追踪进度",
+    "analysis": "Cloudy 分析",
+    "numericalPatterns": "来自你故事里的数字足迹",
+    "keyMetrics": "关键指标",
+    "totalLogs": "记录总数",
+    "avgLength": "平均长度",
+    "maxWords": "最多词数",
+    "timeSpent": "所花时间",
+    "wordCount": "总词数",
+    "writingRhythm": "写作节奏",
+    "morning": "早晨",
+    "afternoon": "下午",
+    "evening": "晚上",
+    "writing": "撰写中",
+    "words_unit": "词",
+    "logs_unit": "条"
+  },
+  "flashback": {
+    "title": "闪回",
+    "desc": "每日为你呈现一段精心挑选的过去。",
+    "enterMix": "进入回顾",
+    "unlockDesc": "达到连续打卡 30 天即可解锁。",
+    "cookiesDailyMix": "Cookie 的每日回顾",
+    "uniqueBlend": "一段专属于你的旅程回顾",
+    "dailyServing": "每日一记",
+    "menuHighlights": "菜单亮点",
+    "fanFavorite": "个人最爱",
+    "firstCourse": "第一课",
+    "dailySpecial": "今日特供",
+    "topPick": "精选内容",
+    "whereItBegan": "起航的地方",
+    "accountAge": "账号时长",
+    "longestGap": "最长间隔",
+    "loveMeter": "喜爱度",
+    "consistency": "一致性",
+    "loved": "被喜爱",
+    "active": "活跃",
+    "needsMemories": "Cookie 需要更多记忆才能开启闪回功能！",
+    "tasteMemory": "品味这段记忆"
+  },
+  "progress": {
+    "unlockedCount": "{{unlocked}}/{{total}} 已解锁",
+    "maxStreak": "最高连续打卡：{{count}}",
+    "days": "天 🔥",
+    "daysActive": "打卡 {{count}} 天",
+    "daysGoal": "目标：{{count}} 天",
+    "description": "每一个小伙伴都代表着你在养成每日习惯过程中心灵成长的里程碑。",
+    "nextReward": "离下个奖励还差 {{count}} 天",
+    "nextReward_one": "离下个奖励还差 {{count}} 天",
+    "unlockMindfulness": "再坚持 {{count}} 天正念即可解锁。",
+    "reward": "奖励",
+    "maintainHabit": "坚持习惯",
+    "unlockedMascot": "你解锁了 {{name}}！",
+    "rewardUnlocked": "奖励已解锁"
+  },
+  "companions": {
+    "SUNNY": {
+      "name": "Sunny",
+      "description": "播下正念的第一颗种子。",
+      "trait": "初学者",
+      "perk": "基础体验",
+      "perkDesc": "旅程从此开始。"
+    },
+    "BRAINY": {
+      "name": "Brainy",
+      "description": "分析你的思维模式。",
+      "trait": "专家",
+      "perk": "用户洞察",
+      "perkDesc": "查看你的个性化洞察。"
+    },
+    "DREAMY": {
+      "name": "Dreamy",
+      "description": "掌握夜晚反思的魔力。",
+      "trait": "大师",
+      "perk": "打卡保护",
+      "perkDesc": "每月可为你挽救一次断签。"
+    },
+    "COOKIE": {
+      "name": "Cookie",
+      "description": "通过每日的陪伴，滋养你的习惯。",
+      "trait": "专注者",
+      "perk": "主厨特供",
+      "perkDesc": "为你准备过去记忆的美味回顾。"
+    },
+    "GROOVY": {
+      "name": "Groovy",
+      "description": "以不可挡的动力摇摆你的旅程。",
+      "trait": "传奇",
+      "perk": "主题颜色",
+      "perkDesc": "用你选择的主色调个性化你的应用。"
+    },
+    "SPARKY": {
+      "name": "Sparky",
+      "description": "最终蜕变为自我关爱的英雄。",
+      "trait": "英雄",
+      "perk": "认证状态",
+      "perkDesc": "赢得金色资料徽章和认证标志。"
+    }
   },
   "journey": {
-    "title": "心灵旅程",
+    "title": "你的旅程",
     "all": "全部",
     "favorites": "收藏",
-    "loading": "加载中...",
-    "noMemories": "旅程才刚刚开始。",
-    "noFavorites": "还没有收藏的记录。",
-    "noMemoriesForDate": "{{date}} 没有记录。",
+    "loading": "正在加载记忆...",
+    "noMemories": "你的旅程才刚刚开始。",
+    "noFavorites": "暂无收藏的记录。",
+    "noMemoriesForDate": "未找到 {{date}} 的记忆。",
     "viewAll": "查看全部记录",
-    "deleteTitle": "确定要删除吗？",
-    "deleteMessage": "这篇回忆将被永久删除，确定吗？",
-    "confirmDelete": "确定删除",
-    "cancelDelete": "保留",
-    "tooLateTitle": "无法删除",
-    "tooLateMessage": "记录发布超过 24 小时后将无法删除。"
+    "deleteTitle": "等一下，确定吗？",
+    "deleteMessage": "人总会犯错！确定要舍弃这段记忆吗？",
+    "confirmDelete": "是的，删除",
+    "cancelDelete": "不，保留",
+    "tooLateTitle": "已超时",
+    "tooLateMessage": "你只能在记录创建后的 24 小时内将其删除。",
+    "chefsSpecial": "主厨特供",
+    "memoryInspector": "记忆放大镜"
+  },
+  "calendar": {
+    "weekdays": {
+      "short": ["日", "一", "二", "三", "四", "五", "六"]
+    }
+  },
+  "welcome": {
+    "hi": "你好，我是 Cloudy",
+    "companion": "我是你的心灵小伴侣，带给你清明的心境。"
+  },
+  "statistics": {
+    "title": "洞察",
+    "analysis": "Cloudy 分析",
+    "description": "来自你故事里的数字足迹",
+    "keyMetrics": "关键指标",
+    "writingRhythm": "写作节奏",
+    "activeDays": "活动天数",
+    "totalLogs": "记录总数",
+    "avgLength": "平均长度",
+    "maxWords": "最多词数",
+    "timeSpent": "所花时间",
+    "wordCount": "总词数",
+    "days": "天",
+    "logs": "条",
+    "words": "词",
+    "writing": "撰写中",
+    "morning": "早晨",
+    "afternoon": "下午",
+    "evening": "晚上",
+    "topThemes": "核心主题"
+  },
+  "summary": {
+    "title": "我们可以一起到达那里。",
+    "body": "研究表明，每天只写 {{gratitude}} 就可以缓解{{struggle}}，并帮助你找到{{goal}}。",
+    "gratitude": "一段感恩",
+    "startWriting": "开始记录",
+    "andSuffix": "以及其他",
+    "andJoin": "和"
+  },
+  "accents": {
+    "ORANGE": "阳光橙",
+    "BLUE": "海洋蓝",
+    "GREEN": "自然绿",
+    "PURPLE": "皇家紫",
+    "PINK": "玫瑰粉",
+    "TEAL": "宁静青"
   },
   "feedback": {
     "title": "反馈与支持",
-    "description": "发现了错误？有想法？或者只是想打个招呼？我随时倾听！您也可以通过我们的网站联系。",
-    "placeholder": "告诉我一切...",
-    "emailPlaceholder": "回复邮箱（可选）",
-    "sendButton": "发送到云端",
+    "description": "发现 Bug 了？有新想法？或者只是想打声招呼？我非常乐意倾听！您也可以通过我们的网站联系我们。",
+    "placeholder": "告诉我一切吧...",
+    "emailPlaceholder": "回复邮箱 (选填)",
+    "sendButton": "发送至云端",
     "waitTitle": "等等！",
-    "waitMessage": "发送前请先写点什么。",
+    "waitMessage": "请在发送前输入一些内容。",
     "successTitle": "谢谢！",
-    "successMessage": "您的反馈已送达我的云端。感谢您！",
-    "successButton": "不客气！",
-    "errorTitle": "哎呀",
-    "errorMessage": "无法发送反馈，请重试。"
+    "successMessage": "您的反馈已经到达我的云端。非常感谢！",
+    "successButton": "不客气！"
   },
   "review": {
-    "delight": "喜悦时刻 ✨",
-    "enjoyingTitle": "您喜欢与 Cloudy 的旅程吗？",
-    "enjoyingMessage": "您的连续记录太棒了！分享评论可以帮助其他人找到内心的平静。",
-    "rateButton": "很喜欢！立即评分"
+    "delight": "快乐时刻 ✨",
+    "enjoyingTitle": "你喜欢 Cloudy 带来的旅程吗？",
+    "enjoyingMessage": "你的连续记录太棒了！分享评价也能帮助其他人找到他们内心的平静。",
+    "rateButton": "非常喜欢！立刻评分"
   },
   "auth": {
     "welcomeBack": "欢迎回来！",
     "saveJourney": "保存您的旅程",
-    "missedYou": "Cloudy 想念您了。",
-    "secureProgress": "创建账户以保护您的进度和回忆。",
+    "missedYou": "Cloudy 想念你了。",
+    "secureProgress": "创建一个账号以确保您的进度和记忆安全。",
     "emailLabel": "邮箱",
     "passwordLabel": "密码",
     "signInButton": "登录",
     "signUpButton": "注册",
-    "newHere": "新用户？",
-    "alreadyJoined": "已有账户？",
-    "createAccount": "创建账户",
+    "newHere": "第一次来？ ",
+    "alreadyJoined": "已经是会员了？ ",
+    "createAccount": "创建账号",
     "orDivider": "或",
     "continueWithGoogle": "使用 Google 继续",
     "missingInfoTitle": "信息缺失",
     "missingInfoMessage": "请输入邮箱和密码。",
-    "accountExistsTitle": "账户已存在",
-    "accountExistsMessage": "要登录现有账户吗？当前的临时数据将不会合并。",
+    "accountExistsTitle": "账号已存在",
+    "accountExistsMessage": "你想登录到已有的旅程吗？您当前的临时数据将不会合并。",
     "cancelButton": "取消",
-    "logInButton": "登录",
+    "logInButton": "注销",
     "successTitle": "成功",
-    "journeySecured": "您的旅程已受到保护！",
-    "confirmEmail": "请检查您的邮箱以确认账户。"
+    "journeySecured": "您的旅程已受保障！",
+    "confirmEmail": "请检查您的邮箱以确认您的账号。"
   },
   "journalEntry": {
     "title": "日记",
-    "header": "专注于美好。",
-    "subheader": "今天您感激的一件小事是什么？",
-    "placeholder": "我感激...",
+    "header": "关注美好的事物。",
+    "subheader": "今天有一件让你感激的小事是什么？",
+    "placeholder": "我感激的是...",
     "saveButton": "保存记录",
-    "savedTitle": "感谢已保存！",
+    "savedTitle": "感恩已保存！",
     "savedMessage": "明天见！",
     "errorTitle": "错误",
-    "errorMessage": "无法保存您的记录。"
+    "errorMessage": "无法保存您的内容。"
   },
   "profileNudge": {
-    "title": "保护您的旅程",
-    "message": "将进度保存到云端，这样您永远不会失去珍贵的回忆。"
+    "title": "保障您的旅程",
+    "message": "将您的进度保存至云端，记忆永不丢失。"
   },
   "ranks": {
-    "beginner": "新手",
+    "beginner": "初学者",
     "expert": "专家",
     "master": "大师",
     "dedicated": "专注者",
     "legend": "传奇",
-    "hero": "HERO"
+    "hero": "英雄"
   },
   "streakLost": {
     "title": "别担心！",
-    "message": "你错过了一天，但这只是旅程的一部分。今天开始新的连续记录吧！",
-    "button": "开始吧"
+    "message": "虽然断签了一天，但这也是旅程的一部分。今天就开始一段新的记录吧！",
+    "button": "出发"
+  },
+  "streakFreeze": {
+    "title": "连续打卡已保护！ ❄️",
+    "message": "你错过了一天，但 Dreamy 动用了魔力来保护你的打卡记录。继续加油吧！"
   },
   "lockScreen": {
     "title": "Cloudy 很安全",
     "subtitle": "解锁以继续您的旅程",
     "button": "解锁",
-    "footer": "您的回忆是私密且加密的"
+    "footer": "您的记忆是私密且加密的"
   },
   "splash": {
-    "tagline": "您通往清晰心灵的小伴侣。"
+    "tagline": "为您打造清明心境的小伙伴。"
   },
   "lockedFeature": {
-    "locked": "已锁定",
-    "unlockMessage": "解锁此功能需达到一次{{required}}天连续记录。您目前有{{current}}天！",
+    "locked": "功能已锁定",
+    "unlockMessage": "达到连续打卡 {{required}} 天即可解锁此功能。你目前是在第 {{current}} 天！",
     "seeProgress": "查看进度"
   },
   "journalMerge": {
     "successTitle": "成功",
-    "welcomeBack": "欢迎回来，{{name}}！我们已将您最近的回忆添加到日记中。",
+    "welcomeBack": "欢迎回来，{{name}}！我们已经将您最近的记忆添加到了您的日记中。",
     "great": "太棒了！"
   }
 }
